--- a/quarto/ODEs/odes.qmd
+++ b/quarto/ODEs/odes.qmd
@@ -87,13 +87,11 @@ $$
 Again, we can integrate to get an answer for any value $t$:
 
 
-$$
 \begin{align*}
 x(t) - x(t_0) &= \int_{t_0}^t \frac{dv}{dt} dt     \\
 &= (v_0t + \frac{1}{2}a t^2 - at_0 t) |_{t_0}^t    \\
 &= (v_0 - at_0)(t - t_0) + \frac{1}{2} a (t^2 - t_0^2).
 \end{align*}
-$$
 
 There are three constants: the initial value for the independent variable, $t_0$, and the two initial values for the velocity and position, $v_0, x_0$.  Assuming $t_0 = 0$, we can simplify the above to get a formula familiar from introductory physics:
 
@@ -339,12 +337,10 @@ Differential equations are classified according to their type. Different types h
 The first-order initial value equations we have seen can be described generally by
 
 
-$$
 \begin{align*}
 y'(x) &= F(y,x),\\
 y(x_0) &= x_0.
 \end{align*}
-$$
 
 Special cases include:
 
@@ -615,9 +611,11 @@ imgfile = "figures/verrazano-narrows-bridge-anniversary-historic-photos-2.jpeg"
 caption = """
 The cables of an unloaded suspension bridge have a different shape than a loaded suspension bridge. As seen, the cables in this [figure](https://www.brownstoner.com/brooklyn-life/verrazano-narrows-bridge-anniversary-historic-photos/) would be modeled by a catenary.
 """
-ImageFile(:ODEs, imgfile, caption)
+# ImageFile(:ODEs, imgfile, caption)
+nothing
 ```
 
+![The cables of an unloaded suspension bridge have a different shape than a loaded suspension bridge. As seen, the cables in this [figure](https://www.brownstoner.com/brooklyn-life/verrazano-narrows-bridge-anniversary-historic-photos/) would be modeled by a catenary.](./figures/verrazano-narrows-bridge-anniversary-historic-photos-2.jpeg)
 ---
 
 
@@ -668,13 +666,11 @@ Though `y` is messy, it can be seen that the answer is a quadratic polynomial in
 In a resistive medium, there are drag forces at play. If this force is proportional to the velocity, say, with proportion $\gamma$, then the equations become:
 
 
-$$
 \begin{align*}
 x''(t) &= -\gamma x'(t), & \quad y''(t) &= -\gamma y'(t) -g, \\
 x(0) &= x_0, &\quad y(0) &= y_0,\\
 x'(0) &= v_0\cos(\alpha),&\quad y'(0) &= v_0 \sin(\alpha).
 \end{align*}
-$$
 
 We now attempt to solve these.
 
