--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -1016,7 +1016,7 @@ This accurately summarizes how the term is used outside of math books. Does it a
 
 
 ```{julia}
-#| hold: true, echo
+#| echo: false
 choices = ["Yes. Same words, same meaning",
            """No, but it is close. An inflection point is when the *acceleration* changes from positive to negative, so if "results" are about how a company's rate of change is changing, then it is in the ballpark."""]
 radioq(choices, 2)
