--- a/quarto/derivatives/mean_value_theorem.qmd
+++ b/quarto/derivatives/mean_value_theorem.qmd
@@ -161,8 +161,14 @@ at a relative minimum, the tangent line is parallel to the
 $x$-axis. This of course is true when the tangent line is well defined
 by Fermat's observation.
 """
-ImageFile(:derivatives, imgfile, caption)
+# ImageFile(:derivatives, imgfile, caption)
+nothing
 ```
+
+![Image number $32$ from L'Hopitals calculus book (the first) showing that
+at a relative minimum, the tangent line is parallel to the
+$x$-axis. This of course is true when the tangent line is well defined
+by Fermat's observation.](./figures/lhopital-32.png)
 
 ### Numeric derivatives
 
@@ -247,9 +253,9 @@ Here the maximum occurs at an endpoint. The critical point $c=0.67\dots$ does no
 :::{.callout-note}
 ## Note
 
-:::
-
 **Absolute minimum** We haven't discussed the parallel problem of   absolute minima over a closed interval. By considering the function   $h(x) = - f(x)$, we see that the any thing true for an absolute   maximum should hold in a related manner for an absolute minimum, in   particular an absolute minimum on a closed interval will only occur   at a critical point or an end point.
+
+:::
 
 
 ## Rolle's theorem
