--- a/quarto/derivatives/optimization.qmd
+++ b/quarto/derivatives/optimization.qmd
@@ -534,8 +534,19 @@ http://www.ams.org/samplings/feature-column/fc-2016-05.)
 
 
 """
-ImageFile(:derivatives, imgfile, caption)
+#ImageFile(:derivatives, imgfile, caption)
+nothing
 ```
+
+![Image number $43$ from l'Hospital's calculus book (the first). A
+traveler leaving location $C$ to go to location $F$ must cross two
+regions separated by the straight line $AEB$. We suppose that in the
+region on the side of $C$, he covers distance $a$ in time $c$, and
+that on the other, on the side of $F$, distance $b$ in the same time
+$c$. We ask through which point $E$ on the line $AEB$ he should pass,
+so as to take the least possible time to get from $C$ to $F$? (From
+http://www.ams.org/samplings/feature-column/fc-2016-05.)](./figures/fcarc-may2016-fig43-250.png)
+
 
 The last example is a modern day illustration of a problem of calculus dating back to l'Hospital. His parameterization is a bit different. Let's change his by taking two points $(0, a)$ and $(L,-b)$, with $a,b,L$ positive values. Above the $x$ axis travel happens at rate $r_0$, and below, travel happens at rate $r_1$, again, both positive. What value $x$ in $[0,L]$ will minimize the total travel time?
 
@@ -1227,8 +1238,12 @@ caption = L"""
 Image number $40$ from l'Hospital's calculus book (the first calculus book). Among all the cones that can be inscribed in a sphere, determine which one has the largest lateral area. (From http://www.ams.org/samplings/feature-column/fc-2016-05)
 
 """
-ImageFile(:derivatives, imgfile, caption)
+#ImageFile(:derivatives, imgfile, caption)
+nothing
 ```
+
+![Image number $40$ from l'Hospital's calculus book (the first calculus book). Among all the cones that can be inscribed in a sphere, determine which one has the largest lateral area. (From [AMS](http://www.ams.org/samplings/feature-column/fc-2016-05)).](./figures/fcarc-may2016-fig40-300.png)
+
 
 The figure above poses a problem about cones in spheres, which can be reduced to a two-dimensional problem. Take a sphere of radius $r=1$, and imagine a secant line of length $l$ connecting $(-r, 0)$ to another point $(x,y)$ with $y>0$. Rotating that line around the $x$ axis produces a cone and its lateral surface is given by $SA=\pi \cdot y \cdot l$. Write $SA$ as a function of $x$ and solve.
 
@@ -1345,12 +1360,12 @@ solve(x/b ~ (x+a)/(b + b*p), x)
 With $x = a/p$ we get by Pythagorean's theorem that
 
 
-$$
+
 \begin{align*}
 c^2 &= (a + a/p)^2 + (b + bp)^2 \\
     &= a^2(1 + \frac{1}{p})^2 + b^2(1+p)^2.
 \end{align*}
-$$
+
 
 The ladder problem minimizes $c$ or equivalently $c^2$.
 
