--- a/quarto/derivatives/taylor_series_polynomials.qmd
+++ b/quarto/derivatives/taylor_series_polynomials.qmd
@@ -113,7 +113,7 @@ The term "best" is deserved, as any other straight line will differ at least in 
 (This is a consequence of Cauchy's mean value theorem with $F(c) = f(c) - f'(c)\cdot(c-x)$ and $G(c) = (c-x)^2$
 
 
-$$
+
 \begin{align*}
 \frac{F'(\xi)}{G'(\xi)} &=
 \frac{f'(\xi) - f''(\xi)(\xi-x) - f(\xi)\cdot 1}{2(\xi-x)} \\
@@ -122,7 +122,7 @@ $$
 &= \frac{f(c) - f'(c)(c-x) - (f(x) - f'(x)(x-x))}{(c-x)^2 - (x-x)^2} \\
 &= \frac{f(c) + f'(c)(x-c) - f(x)}{(x-c)^2}
 \end{align*}
-$$
+
 
 That is, $f(x) = f(c) + f'(c)(x-c) + f''(\xi)/2\cdot(x-c)^2$, or $f(x)-tl(x)$ is as described.)
 
@@ -153,14 +153,12 @@ As in the linear case, there is flexibility in the exact points chosen for the i
 Now, we take a small detour to define some notation. Instead of writing our two points as $c$ and $c+h,$ we use $x_0$ and $x_1$. For any set of points $x_0, x_1, \dots, x_n$, define the **divided differences** of $f$ inductively, as follows:
 
 
-$$
-\begin{align}
+\begin{align*}
 f[x_0] &= f(x_0) \\
 f[x_0, x_1] &= \frac{f[x_1] - f[x_0]}{x_1 - x_0}\\
 \cdots &\\
 f[x_0, x_1, x_2, \dots, x_n] &= \frac{f[x_1, \dots, x_n] - f[x_0, x_1, x_2, \dots, x_{n-1}]}{x_n - x_0}.
-\end{align}
-$$
+\end{align*}
 
 We see the first two values look familiar, and to generate more we just take certain ratios akin to those formed when finding a secant line.
 
@@ -252,12 +250,12 @@ A proof based on Rolle's theorem appears in the appendix.
 Why the fuss? The answer comes from a result of Newton on *interpolating* polynomials. Consider a function $f$ and $n+1$ points $x_0$, $x_1, \dots, x_n$. Then an interpolating polynomial is a polynomial of least degree that goes through each point $(x_i, f(x_i))$. The [Newton form](https://en.wikipedia.org/wiki/Newton_polynomial) of such a polynomial can be written as:
 
 
-$$
+
 \begin{align*}
 f[x_0] &+ f[x_0,x_1] \cdot (x-x_0) + f[x_0, x_1, x_2] \cdot (x-x_0) \cdot (x-x_1) + \\
 & \cdots + f[x_0, x_1, \dots, x_n] \cdot (x-x_0)\cdot \cdots \cdot (x-x_{n-1}).
 \end{align*}
-$$
+
 
 The case $n=0$ gives the value $f[x_0] = f(c)$, which can be interpreted as the slope-$0$ line that goes through the point $(c,f(c))$.
 
@@ -485,12 +483,12 @@ On inspection, it is seen that this is Newton's method applied to $f'(x)$. This 
 Starting with the Newton form of the interpolating polynomial of smallest degree:
 
 
-$$
+
 \begin{align*}
 f[x_0] &+ f[x_0,x_1] \cdot (x - x_0) + f[x_0, x_1, x_2] \cdot (x - x_0)\cdot(x-x_1) + \\
 & \cdots + f[x_0, x_1, \dots, x_n] \cdot (x-x_0) \cdot \cdots \cdot (x-x_{n-1}).
 \end{align*}
-$$
+
 
 and taking $x_i = c + i\cdot h$, for a given $n$, we have in the limit as $h > 0$ goes to zero that coefficients of this polynomial converge to the coefficients of the *Taylor Polynomial of degree n*:
 
@@ -850,24 +848,24 @@ The actual  code is different, as the Taylor polynomial isn't used. The Taylor p
 For notational purposes, let $g(x)$ be the inverse function for $f(x)$. Assume *both* functions have a Taylor polynomial expansion:
 
 
-$$
+
 \begin{align*}
 f(x_0 + \Delta_x) &= f(x_0) + a_1 \Delta_x + a_2 (\Delta_x)^2 + \cdots a_n + (\Delta_x)^n + \dots\\
 g(y_0 + \Delta_y) &= g(y_0) + b_1 \Delta_y + b_2 (\Delta_y)^2 + \cdots b_n + (\Delta_y)^n + \dots
 \end{align*}
-$$
+
 
 Then using $x = g(f(x))$, we have expanding the terms and using $\approx$ to drop the $\dots$:
 
 
-$$
+
 \begin{align*}
 x_0 + \Delta_x &= g(f(x_0 + \Delta_x)) \\
 &\approx g(f(x_0) + \sum_{j=1}^n a_j (\Delta_x)^j) \\
 &\approx g(f(x_0)) + \sum_{i=1}^n b_i \left(\sum_{j=1}^n a_j (\Delta_x)^j \right)^i \\
 &\approx x_0 + \sum_{i=1}^{n-1} b_i \left(\sum_{j=1}^n a_j (\Delta_x)^j\right)^i + b_n \left(\sum_{j=1}^n a_j (\Delta_x)^j\right)^n
 \end{align*}
-$$
+
 
 That is:
 
@@ -1207,7 +1205,7 @@ $$
 These two polynomials are of degree $n$ or less and have $u(x) = h(x)-g(x)=0$, by uniqueness. So the coefficients of $u(x)$ are $0$. We have that the coefficient of $x^n$ must be $a_n-b_n$ so $a_n=b_n$. Our goal is to express $a_n$ in terms of $a_{n-1}$ and $b_{n-1}$. Focusing on the $x^{n-1}$ term, we have:
 
 
-$$
+
 \begin{align*}
 b_n(x-x_n)(x-x_{n-1})\cdot\cdots\cdot(x-x_1)
 &- a_n\cdot(x-x_0)\cdot\cdots\cdot(x-x_{n-1}) \\
@@ -1215,7 +1213,7 @@ b_n(x-x_n)(x-x_{n-1})\cdot\cdots\cdot(x-x_1)
 a_n [(x-x_1)\cdot\cdots\cdot(x-x_{n-1})] [(x- x_n)-(x-x_0)] \\
 &= -a_n \cdot(x_n - x_0) x^{n-1} + p_{n-2},
 \end{align*}
-$$
+
 
 where $p_{n-2}$ is a polynomial of at most degree $n-2$. (The expansion of $(x-x_1)\cdot\cdots\cdot(x-x_{n-1}))$ leaves $x^{n-1}$ plus some lower degree polynomial.) Similarly, we have $a_{n-1}(x-x_0)\cdot\cdots\cdot(x-x_{n-2}) = a_{n-1}x^{n-1} + q_{n-2}$ and $b_{n-1}(x-x_n)\cdot\cdots\cdot(x-x_2) = b_{n-1}x^{n-1}+r_{n-2}$. Combining, we get that the $x^{n-1}$ term of $u(x)$ is
 
