--- a/quarto/differentiable_vector_calculus/scalar_functions_applications.qmd
+++ b/quarto/differentiable_vector_calculus/scalar_functions_applications.qmd
@@ -340,12 +340,12 @@ The level curve $f(x,y)=0$ and the level curve $g(x,y)=0$ may intersect. Solving
 To elaborate, consider two linear equations written in a general form:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 ax + by &= u\\
 cx + dy &= v
-\end{align}
-$$
+\end{align*}
+
 
 A method to solve this by hand would be to solve for $y$ from one equation, replace this expression into the second equation and then solve for $x$. From there, $y$ can be found. A more advanced method expresses the problem in a matrix formulation of the form $Mx=b$ and solves that equation. This form of solving is implemented in `Julia`, through the "backslash" operator. Here is the general solution:
 
@@ -421,22 +421,22 @@ We look to find the intersection point near $(1,1)$ using Newton's method
 We have by linearization:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 f(x,y) &\approx f(x_n, y_n)  + \frac{\partial f}{\partial x}\Delta x + \frac{\partial f}{\partial y}\Delta y \\
 g(x,y) &\approx g(x_n, y_n)  + \frac{\partial g}{\partial x}\Delta x + \frac{\partial g}{\partial y}\Delta y,
-\end{align}
-$$
+\end{align*}
+
 
 where $\Delta x = x- x_n$ and $\Delta y = y-y_n$. Setting $f(x,y)=0$ and $g(x,y)=0$, leaves these two linear equations in $\Delta x$ and $\Delta y$:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{\partial f}{\partial x} \Delta x + \frac{\partial f}{\partial y} \Delta y &= -f(x_n, y_n)\\
 \frac{\partial g}{\partial x} \Delta x + \frac{\partial g}{\partial y} \Delta y &= -g(x_n, y_n).
-\end{align}
-$$
+\end{align*}
+
 
 One step of Newton's method defines $(x_{n+1}, y_{n+1})$ to be the values $(x,y)$ that make the linearized functions about $(x_n, y_n)$ both equal to $\vec{0}$.
 
@@ -855,12 +855,11 @@ The gradient is easily found: $\nabla{f} = \langle 2x - 1, 6y \rangle$, and is $
 
 
 $$
-H = \left[
-\begin{array}{}
+H =
+\begin{bmatrix}
 2 & 0\\
 0 & 6
-\end{array}
-\right].
+\end{bmatrix}.
 $$
 
 At $\vec{a}$ this has positive determinant and $f_{xx} > 0$, so $\vec{a}$ corresponds to a *local* minimum with values $f(\vec{a}) = (1/2)^2 + 3(0) - 1/2 = -1/4$. The absolute maximum and minimum may occur here (well, not the maximum) or on the boundary, so that must be considered. In this case we can easily parameterize the boundary and turn this into the univariate case:
@@ -1069,12 +1068,10 @@ $$
 Another might be the vertical squared distance to the line:
 
 
-$$
 \begin{align*}
 d2(\alpha, \beta) &= (y_1 - l(x_1))^2 + (y_2 - l(x_2))^2 + (y_3 - l(x_3))^2 \\
 &= (y1 - (\alpha + \beta x_1))^2 + (y3 - (\alpha + \beta x_3))^2 + (y3 - (\alpha + \beta x_3))^2
 \end{align*}
-$$
 
 Another might be the *shortest* distance to the line:
 
@@ -1411,12 +1408,12 @@ We can still identify the tangent and normal directions. What is different about
 
 > *The method of Lagrange multipliers*: To optimize $f(x,y)$ subject to a constraint $g(x,y) = k$ we solve for all *simultaneous* solutions to
 >
-> $$
-> \begin{align}
+>
+> \begin{align*}
 > \nabla{f}(x,y) &= \lambda \nabla{g}(x,y), \text{and}\\
 > g(x,y) &= k.
-> \end{align}
-> $$
+> \end{align*}
+>
 >
 > These *possible* points are evaluated to see if they are maxima or minima.
 
@@ -1473,13 +1470,13 @@ $$
 The we have
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{\partial L}{\partial{x}} &= \frac{\partial{f}}{\partial{x}} - \lambda \frac{\partial{g}}{\partial{x}}\\
 \frac{\partial L}{\partial{y}} &= \frac{\partial{f}}{\partial{y}} - \lambda \frac{\partial{g}}{\partial{y}}\\
 \frac{\partial L}{\partial{\lambda}} &= 0 + (g(x,y)  -  k).
-\end{align}
-$$
+\end{align*}
+
 
 But if the Lagrange condition holds, each term is $0$, so Lagrange's method can be seen as solving for point $\nabla{L} = \vec{0}$. The optimization problem in two variables with a constraint becomes a problem of finding and classifying  zeros of a function with *three* variables.
 
@@ -1557,14 +1554,14 @@ The starting point is a *perturbation*: $\hat{y}(x) = y(x) + \epsilon_1 \eta_1(x
 With this notation, and fixing $y$ we can re-express the equations in terms ot $\epsilon_1$ and $\epsilon_2$:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 F(\epsilon_1, \epsilon_2) &= \int f(x, \hat{y}, \hat{y}') dx =
 \int f(x, y + \epsilon_1 \eta_1 + \epsilon_2 \eta_2, y' + \epsilon_1 \eta_1' + \epsilon_2 \eta_2') dx,\\
 G(\epsilon_1, \epsilon_2) &= \int g(x, \hat{y}, \hat{y}') dx =
 \int g(x, y + \epsilon_1 \eta_1 + \epsilon_2 \eta_2, y' + \epsilon_1 \eta_1' + \epsilon_2 \eta_2') dx.
-\end{align}
-$$
+\end{align*}
+
 
 Then our problem is restated as:
 
@@ -1591,18 +1588,19 @@ $$
 Computing just the first one, we have using the chain rule and assuming interchanging the derivative and integral is possible:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{\partial{F}}{\partial{\epsilon_1}}
 &= \int \frac{\partial}{\partial{\epsilon_1}}(
 f(x, y + \epsilon_1 \eta_1 + \epsilon_2 \eta_2, y' + \epsilon_1 \eta_1' + \epsilon_2 \eta_2')) dx\\
 &= \int \left(\frac{\partial{f}}{\partial{y}} \eta_1 + \frac{\partial{f}}{\partial{y'}} \eta_1'\right) dx\quad\quad(\text{from }\nabla{f} \cdot \langle 0, \eta_1, \eta_1'\rangle)\\
 &=\int \eta_1 \left(\frac{\partial{f}}{\partial{y}} - \frac{d}{dx}\frac{\partial{f}}{\partial{y'}}\right) dx.
-\end{align}
-$$
+\end{align*}
 
-The last line by integration by parts: $\int u'(x) v(x) dx = (u \cdot v)(x)\mid_{x_0}^{x_1} - \int u(x) \frac{d}{dx} v(x) dx = - \int u(x) \frac{d}{dx} v(x) dx $. The last lines, as $\eta_1 = 0$ at $x_0$ and $x_1$ by assumption. We get:
 
+The last line by integration by parts:
+$\int u'(x) v(x) dx = (u \cdot v)(x)\mid_{x_0}^{x_1} - \int u(x) \frac{d}{dx} v(x) dx = - \int u(x) \frac{d}{dx} v(x) dx$.
+The last lines, as $\eta_1 = 0$ at $x_0$ and $x_1$ by assumption. We get:
 
 $$
 0 = \int \eta_1\left(\frac{\partial{f}}{\partial{y}} - \frac{d}{dx}\frac{\partial{f}}{\partial{y'}}\right).
@@ -1664,12 +1662,12 @@ ex2 = Eq(ex1.lhs()^2 - 1, simplify(ex1.rhs()^2) - 1)
 Now $y'$ can be integrated using the substitution $y + C = \lambda \cos\theta$ to give: $-\lambda\int\cos\theta d\theta = x + D$, $D$ some constant. That is:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 x + D &=  - \lambda \sin\theta\\
 y + C &= \lambda\cos\theta.
-\end{align}
-$$
+\end{align*}
+
 
 Squaring gives the equation of a circle: $(x +D)^2 + (y+C)^2 = \lambda^2$.
 
@@ -1680,12 +1678,12 @@ We center and *rescale* the problem so that $x_0 = -1, x_1 = 1$. Then $L > 2$ as
 We have $y=0$ at $x=1$ and $-1$ giving:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 (-1 + D)^2 + (0 + C)^2 &= \lambda^2\\
 (+1 + D)^2 + (0 + C)^2 &= \lambda^2.
-\end{align}
-$$
+\end{align*}
+
 
 Squaring out and solving gives $D=0$, $1 + C^2 = \lambda^2$. That is, an arc of circle with radius $1+C^2$ and centered at $(0, -C)$.
 
@@ -1776,15 +1774,15 @@ where $R_k(x) = f^{k+1}(\xi)/(k+1)!(x-a)^{k+1}$ for some $\xi$ between $a$ and $
 This theorem can be generalized to scalar functions, but the notation can be cumbersome. Following [Folland](https://sites.math.washington.edu/~folland/Math425/taylor2.pdf) we use *multi-index* notation. Suppose $f:R^n \rightarrow R$, and let $\alpha=(\alpha_1, \alpha_2, \dots, \alpha_n)$. Then define the following notation:
 
 
-$$
+
 \begin{align*}
 |\alpha| &= \alpha_1 + \cdots + \alpha_n, \\
 \alpha! &= \alpha_1!\alpha_2!\cdot\cdots\cdot\alpha_n!, \\
 \vec{x}^\alpha &= x_1^{\alpha_1}x_2^{\alpha_2}\cdots x_n^{\alpha^n}, \\
 \partial^\alpha f &= \partial_1^{\alpha_1}\partial_2^{\alpha_2}\cdots \partial_n^{\alpha_n} f \\
 & = \frac{\partial^{|\alpha|}f}{\partial x_1^{\alpha_1} \partial x_2^{\alpha_2} \cdots \partial x_n^{\alpha_n}}.
-\endalign*}
-$$
+\end{align*}
+
 
 This notation makes many formulas from one dimension carry over to higher dimensions. For example, the binomial theorem says:
 
@@ -1819,13 +1817,11 @@ where $R_{\vec{a},k} = \sum_{|\alpha|=k+1}\partial^\alpha \frac{f(\vec{a} + c\ve
 The elegant notation masks what can be complicated expressions. Consider the simple case $f:R^2 \rightarrow R$ and $k=2$. Then this says:
 
 
-$$
 \begin{align*}
 f(x + dx, y+dy) &= f(x, y) + \frac{\partial f}{\partial x} dx + \frac{\partial f}{\partial y} dy \\
 &+ \frac{\partial^2 f}{\partial x^2} \frac{dx^2}{2} +  2\frac{\partial^2 f}{\partial x\partial y} \frac{dx dy}{2}\\
 &+ \frac{\partial^2 f}{\partial y^2} \frac{dy^2}{2} + R_{\langle x, y \rangle, k}(\langle dx, dy \rangle).
 \end{align*}
-$$
 
 Using $\nabla$ and $H$ for the Hessian and $\vec{x} = \langle x, y \rangle$ and $d\vec{x} = \langle dx, dy \rangle$, this can be expressed as:
 
@@ -2211,12 +2207,10 @@ Is this the Hessian of $f$?
 
 
 $$
-\left[
-\begin{array}{}
+\begin{bmatrix}
 2a & 2b\\
 2b  & 2c
-\end{array}
-\right]
+\end{bmatrix}
 $$
 
 ```{julia}
@@ -2229,12 +2223,10 @@ Or is this the Hessian of $f$?
 
 
 $$
-\left[
-\begin{array}{}
+\begin{bmatrix}
 2ax & by\\
 bx  & 2cy
-\end{array}
-\right]
+\end{bmatrix}
 $$
 
 ```{julia}
