--- a/quarto/differentiable_vector_calculus/vector_fields.qmd
+++ b/quarto/differentiable_vector_calculus/vector_fields.qmd
@@ -61,8 +61,13 @@ caption = """
 Illustration of the magnetic field of the earth using field lines to indicate the field. From
 [Wikipedia](https://en.wikipedia.org/wiki/Magnetic_field).
 """
-ImageFile(:differentiable_vector_calculus, imgfile, caption)
+# ImageFile(:differentiable_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![Illustration of the magnetic field of the earth using field lines to indicate the field. From
+[Wikipedia](https://en.wikipedia.org/wiki/Magnetic_field).
+](./figures/magnetic-field.png)
 
 ---
 
@@ -192,12 +197,12 @@ surface(unzip(Phi.(thetas, phis'))...)
 The partial derivatives of each component, $\partial{\Phi}/\partial{\theta}$ and $\partial{\Phi}/\partial{\phi}$, can be computed directly:
 
 
-$$
+
 \begin{align*}
 \partial{\Phi}/\partial{\theta} &= \langle -\sin(\phi)\sin(\theta), \sin(\phi)\cos(\theta),0 \rangle,\\
 \partial{\Phi}/\partial{\phi} &= \langle \cos(\phi)\cos(\theta), \cos(\phi)\sin(\theta), -\sin(\phi) \rangle.
 \end{align*}
-$$
+
 
 Using `SymPy`, we can compute through:
 
@@ -257,28 +262,27 @@ For a multivariable function $F:R^n \rightarrow R^m$, we may express the functio
 
 
 $$
-J = \left[
-\begin{align*}
+J =
+\begin{bmatrix}
 \frac{\partial f_1}{\partial x_1} &\quad \frac{\partial f_1}{\partial x_2} &\dots&\quad\frac{\partial f_1}{\partial x_n}\\
 \frac{\partial f_2}{\partial x_1} &\quad \frac{\partial f_2}{\partial x_2} &\dots&\quad\frac{\partial f_2}{\partial x_n}\\
 &&\vdots&\\
 \frac{\partial f_m}{\partial x_1} &\quad \frac{\partial f_m}{\partial x_2} &\dots&\quad\frac{\partial f_m}{\partial x_n}
-\end{align*}
-\right].
+\end{bmatrix}.
 $$
 
 This may also be viewed as:
 
 
 $$
-J = \left[
-\begin{align*}
+J =
+\begin{bmatrix}
 &\nabla{f_1}'\\
 &\nabla{f_2}'\\
 &\quad\vdots\\
 &\nabla{f_m}'
-\end{align*}
-\right] =
+\end{bmatrix}
+ =
 \left[
 \frac{\partial{F}}{\partial{x_1}}\quad
 \frac{\partial{F}}{\partial{x_2}} \cdots
@@ -312,24 +316,21 @@ $$
 
 $$
 \text{Hessian} =
-\left[
-\begin{align*}
+\begin{bmatrix}
 \frac{\partial^2 f}{\partial x^2}          &\quad \frac{\partial^2 f}{\partial x \partial y}\\
 \frac{\partial^2 f}{\partial y \partial x} &\quad \frac{\partial^2 f}{\partial y \partial y}
-\end{align*}
-\right]
+\end{bmatrix}
 $$
 
 This is equivalent to:
 
 
 $$
-\left[
-\begin{align*}
+\begin{bmatrix}
 \frac{\partial \frac{\partial f}{\partial x}}{\partial x} &\quad \frac{\partial \frac{\partial f}{\partial x}}{\partial y}\\
 \frac{\partial \frac{\partial f}{\partial y}}{\partial x} &\quad \frac{\partial \frac{\partial f}{\partial y}}{\partial y}\\
-\end{align*}
-\right].
+\end{bmatrix}
+.
 $$
 
 As such, the total derivative is a generalization of what we have previously discussed.
@@ -338,12 +339,11 @@ As such, the total derivative is a generalization of what we have previously dis
 ## The chain rule
 
 
-If $G:R^k \rightarrow R^n$ and $F:R^n \rightarrow R^m$, then the composition $F\circ G$ takes $R^k \rightarrow R^m$. If all three functions are totally differentiable, then a chain rule will hold (total derivative of $F\circ G$ at point $a$):
+If $G:R^k \rightarrow R^n$ and $F:R^n \rightarrow R^m$, then the composition $F\circ G$ takes $R^k \rightarrow R^m.$ If all three functions are totally differentiable, then a chain rule will hold (total derivative of $F\circ G$ at point $a$):
 
 
 $$
 d(F\circ G)_a = dF_{G(a)} \cdot dG_a
-
 $$
 
 If correct, this has the same formulation as the chain rule for the univariate case: derivative of outer at the inner *times* the derivative of the inner.
@@ -365,7 +365,7 @@ where $\epsilon(h) \rightarrow \vec{0}$ as $h \rightarrow \vec{0}$.
 We have, using this for *both* $F$ and $G$:
 
 
-$$
+
 \begin{align*}
 F(G(a + \vec{h})) - F(G(a)) &=
 F(G(a) + (dG_a \cdot \vec{h} + \epsilon_G \vec{h})) - F(G(a))\\
@@ -373,19 +373,19 @@ F(G(a) + (dG_a \cdot \vec{h} + \epsilon_G \vec{h})) - F(G(a))\\
 &+ \quad\epsilon_F (dG_a \cdot \vec{h} + \epsilon_G \vec{h}) - F(G(a))\\
 &= dF_{G(a)} \cdot (dG_a \cdot \vec{h})  +  dF_{G(a)} \cdot (\epsilon_G \vec{h}) + \epsilon_F (dG_a \cdot \vec{h}) + (\epsilon_F \cdot \epsilon_G\vec{h})
 \end{align*}
-$$
+
 
 The last line uses the linearity of $dF$ to isolate $dF_{G(a)} \cdot (dG_a \cdot \vec{h})$. Factoring out $\vec{h}$ and taking norms gives:
 
 
-$$
+
 \begin{align*}
 \frac{\| F(G(a+\vec{h})) - F(G(a)) - dF_{G(a)}dG_a \cdot \vec{h} \|}{\| \vec{h} \|} &=
 \frac{\|  dF_{G(a)}\cdot(\epsilon_G\vec{h}) + \epsilon_F (dG_a\cdot \vec{h}) + (\epsilon_F\cdot\epsilon_G\vec{h}) \|}{\| \vec{h} \|} \\
 &\leq \|  dF_{G(a)}\cdot\epsilon_G + \epsilon_F (dG_a) + \epsilon_F\cdot\epsilon_G \|\frac{\|\vec{h}\|}{\| \vec{h} \|}\\
 &\rightarrow 0.
 \end{align*}
-$$
+
 
 ### Examples
 
@@ -666,17 +666,17 @@ det(A1), 1/det(A2)
 The technique of *implicit differentiation* is a useful one, as it allows derivatives of more complicated expressions to be found. The main idea, expressed here with three variables is if an equation may be viewed as $F(x,y,z) = c$, $c$ a constant, then $z=\phi(x,y)$ may be viewed as a function of $x$ and $y$. Hence, we can use the chain rule to find: $\partial z / \partial x$ and $\partial z /\partial x$. Let $G(x,y) = \langle x, y, \phi(x,y) \rangle$ and then differentiation $(F \circ G)(x,y) = c$:
 
 
-$$
+
 \begin{align*}
 0 &= dF_{G(x,y)} \circ dG_{\langle x, y\rangle}\\
 &= [\frac{\partial F}{\partial x}\quad \frac{\partial F}{\partial y}\quad \frac{\partial F}{\partial z}](G(x,y)) \cdot
-\left[\begin{array}{}
+\begin{bmatrix}
 1 & 0\\
 0 & 1\\
 \frac{\partial \phi}{\partial x} & \frac{\partial \phi}{\partial y}
-\end{array}\right].
+\end{bmatrix}.
 \end{align*}
-$$
+
 
 Solving yields
 
@@ -903,12 +903,11 @@ The transformation $F(x, y) = \langle 2x + 3y + 1, 4x + y + 2\rangle$ is an exam
 
 
 $$
-J = \left[
-\begin{array}{}
+J =
+\begin{bmatrix}
 2 & 4\\
 3 & 1
-\end{array}
-\right].
+\end{bmatrix}.
 $$
 
 ```{julia}
@@ -929,12 +928,11 @@ Does the transformation $F(u,v) = \langle u^2 - v^2, u^2 + v^2 \rangle$ have Jac
 
 
 $$
-J = \left[
-\begin{array}{}
+J =
+\begin{bmatrix}
 2u & -2v\\
 2u & 2v
-\end{array}
-\right]?
+\end{bmatrix}?
 $$
 
 ```{julia}
