--- a/quarto/differentiable_vector_calculus/vectors.qmd
+++ b/quarto/differentiable_vector_calculus/vectors.qmd
@@ -444,25 +444,22 @@ $$
 The left hand sides are in the form of a dot product, in this case $\langle a,b \rangle \cdot \langle x, y\rangle$ and  $\langle a,b,c \rangle \cdot \langle x, y, z\rangle$ respectively. When there is a system of equations, something like:
 
 
-$$
-\begin{array}{}
-3x  &+& 4y  &- &5z &= 10\\
-3x  &-& 5y  &+ &7z &= 11\\
--3x &+& 6y  &+ &9z &= 12,
-\end{array}
-$$
+\begin{align*}
+3x  &+ 4y  &- 5z &= 10\\
+3x  &- 5y  &+ 7z &= 11\\
+-3x &+ 6y  &+ 9z &= 12,
+\end{align*}
 
 Then we might think of $3$ vectors $\langle 3,4,-5\rangle$, $\langle 3,-5,7\rangle$, and $\langle -3,6,9\rangle$ being dotted with $\langle x,y,z\rangle$. Mathematically, matrices and their associated algebra are used to represent this. In this example, the system of equations above would be represented by a matrix and two vectors:
 
 
 $$
-M = \left[
-\begin{array}{}
+M =
+\begin{bmatrix}
 3 & 4 & -5\\
 5 &-5 &  7\\
 -3& 6 & 9
-\end{array}
-\right],\quad
+\end{bmatrix},\quad
 \vec{x} = \langle x, y , z\rangle,\quad
 \vec{b} = \langle 10, 11, 12\rangle,
 $$
@@ -512,38 +509,33 @@ Matrices have other operations defined on them. We mention three here:
 
 
 $$
-\left|
-\begin{array}{}
+\begin{vmatrix}
 a&b\\
 c&d
-\end{array}
-\right| =
+\end{vmatrix}
+ =
 ad - bc, \quad
-\left|
-\begin{array}{}
+\begin{vmatrix}
 a&b&c\\
 d&e&f\\
 g&h&i
-\end{array}
-\right| =
-a \left|
-\begin{array}{}
+\end{vmatrix}
+ =
+a
+\begin{vmatrix}
 e&f\\
 h&i
-\end{array}
-\right|
-- b \left|
-\begin{array}{}
+\end{vmatrix}
+- b
+\begin{vmatrix}
 d&f\\
 g&i
-\end{array}
-\right|
-+c \left|
-\begin{array}{}
+\end{vmatrix}
++c
+\begin{vmatrix}
 d&e\\
 g&h
-\end{array}
-\right|.
+\end{vmatrix}
 $$
 
 The $3\times 3$ case shows how determinants may be [computed recursively](https://en.wikipedia.org/wiki/Determinant#Definition), using "cofactor" expansion.
@@ -776,13 +768,11 @@ There is a matrix notation that can simplify this computation. If we *formally* 
 
 
 $$
-\left[
-\begin{array}{}
+\begin{bmatrix}
 \hat{i} & \hat{j} & \hat{k}\\
 u_1   & u_2   & u_3\\
 v_1   & v_2   & v_3
-\end{array}
-\right]
+\end{bmatrix}
 $$
 
 From the $\sin(\theta)$ term in the definition, we see that $\vec{u}\times\vec{u}=0$. In fact, the cross product is $0$ only if the two vectors involved are parallel or there is a zero vector.
