--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -68,12 +68,9 @@ and loads some useful packages that will be used repeatedly.
 These notes are presented as a Quarto book. To learn more about Quarto
 books visit <https://quarto.org/docs/books>.
 
-These notes may also be compiled into `Pluto` notebooks. As such, to
-accommodate `Pluto`'s design of only one global variable definition
-being allowed per notebook, there is frequent use of
-[Unicode](./misc/unicode.html) symbols for variable names.
+These notes may be compiled into a `pdf` file through Quarto. As the result is rather large, we do not provide that file for download. For the interested reader, downloading the repository, instantiating the environment, and running `quarto` to render to `pdf` in the `quarto` subdirectory should produce that file (after some time).
 
-To contribute -- say by suggesting addition topics, correcting a
+To *contribute* -- say by suggesting addition topics, correcting a
 mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors).
 
 ----
