--- a/quarto/integral_vector_calculus/div_grad_curl.qmd
+++ b/quarto/integral_vector_calculus/div_grad_curl.qmd
@@ -216,8 +216,8 @@ annotate!([
 Let $F=\langle F_x, F_y\rangle$. For small enough values of $\Delta{x}$ and $\Delta{y}$ the line integral, $\oint_C F\cdot d\vec{r}$ can be *approximated* by $4$ terms:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \left(F(x,y) \cdot \hat{i}\right)\Delta{x} &+
 \left(F(x+\Delta{x},y) \cdot \hat{j}\right)\Delta{y} +
 \left(F(x,y+\Delta{y}) \cdot (-\hat{i})\right)\Delta{x} +
@@ -228,8 +228,8 @@ F_x(x, y+\Delta{y}) (-\Delta{x}) + F_y(x,y) (-\Delta{y})\\
 &=
 (F_y(x + \Delta{x}, y) - F_y(x, y))\Delta{y} -
 (F_x(x, y+\Delta{y})-F_x(x,y))\Delta{x}.
-\end{align}
-$$
+\end{align*}
+
 
 The Riemann approximation allows a choice of evaluation point for Riemann integrable functions, and the choice here lends itself to further analysis. Were the above divided by $\Delta{x}\Delta{y}$, the area of the box, and a limit taken, partial derivatives appear to suggest this formula:
 
@@ -325,18 +325,18 @@ p
 Now we compute the *line integral*. Consider the top face, $S_1$, connecting $(x,y,z+\Delta z), (x + \Delta x, y, z + \Delta z),  (x + \Delta x, y + \Delta y, z + \Delta z),  (x, y + \Delta y, z + \Delta z)$, Using the *right hand rule*, parameterize the boundary curve, $C_1$, in a counter clockwise direction so the right hand rule yields the outward pointing normal ($\hat{k}$). Then the integral $\oint_{C_1} F\cdot \hat{T} ds$ is *approximated* by the following Riemann sum of $4$ terms:
 
 
-$$
+
 \begin{align*}
 F(x,y, z+\Delta{z}) \cdot \hat{i}\Delta{x}  &+ F(x+\Delta x, y, z+\Delta{z}) \cdot \hat{j}  \Delta y \\
 &+ F(x, y+\Delta y, z+\Delta{z}) \cdot (-\hat{i}) \Delta{x}  \\
 &+ F(x, y, z+\Delta{z}) \cdot (-\hat{j}) \Delta{y}.
 \end{align*}
-$$
+
 
 (The points $c_i$ are chosen from the endpoints of the line segments.)
 
 
-$$
+
 \begin{align*}
 \oint_{C_1} F\cdot \hat{T} ds
 &\approx  (F_y(x+\Delta x, y, z+\Delta{z})   \\
@@ -344,18 +344,18 @@ $$
 &-  (F_x(x,y + \Delta{y}, z+\Delta{z})  \\
 &- F_x(x, y, z+\Delta{z})) \Delta{x}
 \end{align*}
-$$
+
 
 As before, were this divided by the *area* of the surface, we have after rearranging and cancellation:
 
 
-$$
+
 \begin{align*}
 \frac{1}{\Delta{S_1}} \oint_{C_1} F \cdot \hat{T} ds &\approx
 \frac{F_y(x+\Delta x, y, z+\Delta{z}) - F_y(x, y, z+\Delta{z})}{\Delta{x}}\\
 &- \frac{F_x(x, y+\Delta y, z+\Delta{z}) - F_x(x, y, z+\Delta{z})}{\Delta{y}}.
 \end{align*}
-$$
+
 
 In the limit, as  $\Delta{S} \rightarrow 0$, this will converge to $\partial{F_y}/\partial{x}-\partial{F_x}/\partial{y}$.
 
@@ -366,7 +366,7 @@ Had the bottom of the box been used, a similar result would be found, up to a mi
 Unlike the two dimensional case, there are other directions to consider and here the other sides will yield different answers. Consider now the face connecting $(x,y,z), (x+\Delta{x}, y, z), (x+\Delta{x}, y, z + \Delta{z})$, and $ (x,y,z+\Delta{z})$ with outward pointing normal $-\hat{j}$. Let $S_2$ denote this face and $C_2$ describe its boundary. Orient this curve so that the right hand rule points in the $-\hat{j}$ direction (the outward pointing normal). Then, as before, we can approximate:
 
 
-$$
+
 \begin{align*}
 \oint_{C_2} F \cdot \hat{T} ds
 &\approx
@@ -377,7 +377,7 @@ F(x,y,z) \cdot \hat{i} \Delta{x} \\
 &= (F_z(x+\Delta{x},y,z) - F_z(x, y, z))\Delta{z} -
 (F_x(x,y,z+\Delta{z}) - F(x,y,z)) \Delta{x}.
 \end{align*}
-$$
+
 
 Dividing by $\Delta{S}=\Delta{x}\Delta{z}$ and taking a limit will give:
 
@@ -423,13 +423,12 @@ The curl has a formal representation in terms of a $3\times 3$ determinant, simi
 
 
 $$
-\text{curl}(F) = \det\left[
-\begin{array}{}
+\text{curl}(F) = \det
+\begin{bmatrix}
 \hat{i} & \hat{j} & \hat{k}\\
 \frac{\partial}{\partial{x}} & \frac{\partial}{\partial{y}} & \frac{\partial}{\partial{z}}\\
 F_x & F_y & F_z
-\end{array}
-\right]
+\end{bmatrix}
 $$
 
 ---
@@ -474,7 +473,7 @@ The divergence, gradient, and curl all involve partial derivatives. There is a n
 This is a *vector differential operator* that acts on functions and vector fields through the typical notation to yield the three operations:
 
 
-$$
+
 \begin{align*}
 \nabla{f} &= \langle
 \frac{\partial{f}}{\partial{x}},
@@ -502,17 +501,17 @@ $$
 \frac{\partial}{\partial{y}},
 \frac{\partial}{\partial{z}}
 \rangle \times F =
-\det\left[
-\begin{array}{}
+\det
+\begin{bmatrix}
 \hat{i} & \hat{j} & \hat{k} \\
 \frac{\partial}{\partial{x}}&
 \frac{\partial}{\partial{y}}&
 \frac{\partial}{\partial{z}}\\
 F_x & F_y & F_z
-\end{array}
-\right],\quad\text{the curl}.
+\end{bmatrix}
+,\quad\text{the curl}.
 \end{align*}
-$$
+
 
 :::{.callout-note}
 ## Note
@@ -842,13 +841,13 @@ Let $f$ and $g$ denote scalar functions, $R^3 \rightarrow R$ and $F$ and $G$ be 
 As with the sum rule of univariate derivatives, these operations satisfy:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \nabla(f + g) &= \nabla{f} + \nabla{g}\\
 \nabla\cdot(F+G) &= \nabla\cdot{F} + \nabla\cdot{G}\\
 \nabla\times(F+G) &= \nabla\times{F} + \nabla\times{G}.
-\end{align}
-$$
+\end{align*}
+
 
 ### Product rule
 
@@ -856,13 +855,13 @@ $$
 The product rule $(uv)' = u'v + uv'$ has related formulas:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \nabla{(fg)} &= (\nabla{f}) g + f\nabla{g} = g\nabla{f}  + f\nabla{g}\\
 \nabla\cdot{fF} &= (\nabla{f})\cdot{F} +  f(\nabla\cdot{F})\\
 \nabla\times{fF} &= (\nabla{f})\times{F} +  f(\nabla\times{F}).
-\end{align}
-$$
+\end{align*}
+
 
 ### Rules over cross products
 
@@ -870,13 +869,13 @@ $$
 The cross product of two vector fields is a vector field for which the divergence and curl may be taken. There are formulas to relate to the individual terms:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \nabla\cdot(F \times G) &= (\nabla\times{F})\cdot G - F \cdot (\nabla\times{G})\\
 \nabla\times(F \times G) &= F(\nabla\cdot{G}) - G(\nabla\cdot{F} + (G\cdot\nabla)F-(F\cdot\nabla)G\\
 &= \nabla\cdot(BA^t - AB^t).
-\end{align}
-$$
+\end{align*}
+
 
 The curl formula is more involved.
 
@@ -921,7 +920,7 @@ Second,
 This is not as clear, but can be seen algebraically as terms cancel. First:
 
 
-$$
+
 \begin{align*}
 \nabla\cdot(\nabla\times{F}) &=
 \langle
@@ -938,7 +937,7 @@ $$
 \left(\frac{\partial^2{F_x}}{\partial{z}\partial{y}} - \frac{\partial^2{F_z}}{\partial{x}\partial{y}}\right) +
 \left(\frac{\partial^2{F_y}}{\partial{x}\partial{z}} - \frac{\partial^2{F_x}}{\partial{y}\partial{z}}\right)
 \end{align*}
-$$
+
 
 Focusing on one component function, $F_z$ say, we see this contribution:
 
@@ -1014,7 +1013,7 @@ This is because of how the line integrals are oriented so that the right-hand ru
 The [invariance of charge](https://en.wikipedia.org/wiki/Maxwell%27s_equations#Charge_conservation) can be derived as a corollary of Maxwell's equation. The divergence of the curl of the magnetic field is $0$, leading to:
 
 
-```{mat}
+
 \begin{align*}
 0 &= \nabla\cdot(\nabla\times{B}) \\
 &=
@@ -1024,7 +1023,7 @@ The [invariance of charge](https://en.wikipedia.org/wiki/Maxwell%27s_equations#C
 &=
 \mu_0(\nabla\cdot{J} + \frac{\partial{\rho}}{\partial{t}}).
 \end{align*}
-```
+
 
 That is $\nabla\cdot{J} = -\partial{\rho}/\partial{t}$. This says any change in the charge density in time ($\partial{\rho}/\partial{t}$) is balanced off by a divergence in the electric current density ($\nabla\cdot{J}$). That is, charge can't be created or destroyed in an isolated system.
 
@@ -1048,25 +1047,25 @@ $$
 Without explaining why, these values can be computed using volume and surface integrals:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \phi(\vec{r}') &=
 \frac{1}{4\pi} \int_V \frac{\nabla \cdot F(\vec{r})}{\|\vec{r}'-\vec{r} \|} dV -
 \frac{1}{4\pi} \oint_S \frac{F(\vec{r})}{\|\vec{r}'-\vec{r} \|} \cdot \hat{N} dS\\
 A(\vec{r}') &= \frac{1}{4\pi} \int_V \frac{\nabla \times F(\vec{r})}{\|\vec{r}'-\vec{r} \|} dV +
 \frac{1}{4\pi} \oint_S \frac{F(\vec{r})}{\|\vec{r}'-\vec{r} \|} \times \hat{N} dS.
-\end{align}
-$$
+\end{align*}
+
 
 If $V = R^3$, an unbounded domain, *but* $F$ *vanishes* faster than $1/r$, then the theorem still holds with just the volume integrals:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \phi(\vec{r}') &=\frac{1}{4\pi} \int_V \frac{\nabla \cdot F(\vec{r})}{\|\vec{r}'-\vec{r} \|} dV\\
 A(\vec{r}') &= \frac{1}{4\pi} \int_V \frac{\nabla \times F(\vec{r})}{\|\vec{r}'-\vec{r}\|} dV.
-\end{align}
-$$
+\end{align*}
+
 
 ## Change of variable
 
@@ -1080,8 +1079,8 @@ Some details are [here](https://en.wikipedia.org/wiki/Curvilinear_coordinates), 
 We restrict to $n=3$ and use $(x,y,z)$ for Cartesian coordinates and $(u,v,w)$ for an *orthogonal* curvilinear coordinate system, such as spherical or cylindrical. If $\vec{r} = \langle x,y,z\rangle$, then
 
 
-$$
-\begin{align}
+
+\begin{align*}
 d\vec{r} &= \langle dx,dy,dz \rangle = J \langle du,dv,dw\rangle\\
 &=
 \left[ \frac{\partial{\vec{r}}}{\partial{u}} \vdots
@@ -1090,8 +1089,8 @@ d\vec{r} &= \langle dx,dy,dz \rangle = J \langle du,dv,dw\rangle\\
 &= \frac{\partial{\vec{r}}}{\partial{u}} du +
 \frac{\partial{\vec{r}}}{\partial{v}} dv
 \frac{\partial{\vec{r}}}{\partial{w}} dw.
-\end{align}
-$$
+\end{align*}
+
 
 The term ${\partial{\vec{r}}}/{\partial{u}}$ is tangent to the curve formed by *assuming* $v$ and $w$ are constant and letting $u$ vary. Similarly for the other partial derivatives. Orthogonality assumes that at every point, these tangent vectors are orthogonal.
 
@@ -1138,7 +1137,7 @@ This uses orthogonality, so $\hat{e}_v \times \hat{e}_w$ is parallel to $\hat{e}
 The volume element is found by *projecting* $d\vec{r}$ onto the $\hat{e}_u$, $\hat{e}_v$, $\hat{e}_w$ coordinate system through $(d\vec{r} \cdot\hat{e}_u) \hat{e}_u$, $(d\vec{r} \cdot\hat{e}_v) \hat{e}_v$, and $(d\vec{r} \cdot\hat{e}_w) \hat{e}_w$. Then forming the triple scalar product to compute the volume of the parallelepiped:
 
 
-$$
+
 \begin{align*}
 \left[(d\vec{r} \cdot\hat{e}_u) \hat{e}_u\right] \cdot
 \left(
@@ -1149,7 +1148,7 @@ $$
 &=
 h_u h_v h_w  du dv dw,
 \end{align*}
-$$
+
 
 as the unit vectors are orthonormal, their triple scalar product is $1$ and $d\vec{r}\cdot\hat{e}_u = h_u du$, etc.
 
@@ -1214,21 +1213,21 @@ p
 The tangent vectors found from the partial derivatives of $\vec{r}$:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{\partial{\vec{r}}}{\partial{r}} &=
 \langle \cos(\theta) \cdot \sin(\phi), \sin(\theta) \cdot \sin(\phi), \cos(\phi)\rangle,\\
 \frac{\partial{\vec{r}}}{\partial{\theta}} &=
 \langle -r\cdot\sin(\theta)\cdot\sin(\phi), r\cdot\cos(\theta)\cdot\sin(\phi), 0\rangle,\\
 \frac{\partial{\vec{r}}}{\partial{\phi}} &=
 \langle r\cdot\cos(\theta)\cdot\cos(\phi), r\cdot\sin(\theta)\cdot\cos(\phi), -r\cdot\sin(\phi) \rangle.
-\end{align}
-$$
+\end{align*}
+
 
 With this, we have $h_r=1$, $h_\theta=r\sin(\phi)$, and $h_\phi = r$. So that
 
 
-$$
+
 \begin{align*}
 dl &= \sqrt{dr^2 + (r\sin(\phi)d\theta^2) + (rd\phi)^2},\\
 dS_r &= r^2\sin(\phi)d\theta d\phi,\\
@@ -1236,7 +1235,7 @@ dS_\theta &= rdr d\phi,\\
 dS_\phi &= r\sin(\phi)dr d\theta, \quad\text{and}\\
 dV &= r^2\sin(\phi) drd\theta d\phi.
 \end{align*}
-$$
+
 
 The following visualizes the volume and the surface elements.
 
@@ -1292,7 +1291,7 @@ p
 If $f$ is a scalar function then $df = \nabla{f} \cdot d\vec{r}$ by the chain rule. Using the curvilinear coordinates:
 
 
-$$
+
 \begin{align*}
 df &=
 \frac{\partial{f}}{\partial{u}} du +
@@ -1303,7 +1302,7 @@ df &=
 \frac{1}{h_v}\frac{\partial{f}}{\partial{v}} h_vdv +
 \frac{1}{h_w}\frac{\partial{f}}{\partial{w}} h_wdw.
 \end{align*}
-$$
+
 
 But, as was used above, $d\vec{r} \cdot \hat{e}_u = h_u du$, etc. so $df$ can be re-expressed as:
 
@@ -1379,13 +1378,12 @@ where $S$ is a surface perpendicular to $\hat{N}$ with boundary $C$. For a small
 
 
 $$
-\nabla\times{F} = \det \left[
-\begin{array}{}
+\nabla\times{F} = \det
+\begin{bmatrix}
 h_u\hat{e}_u & h_v\hat{e}_v & h_w\hat{e}_w \\
 \frac{\partial}{\partial{u}} & \frac{\partial}{\partial{v}} & \frac{\partial}{\partial{w}} \\
 h_uF_u & h_v F_v & h_w F_w
-\end{array}
-\right].
+\end{bmatrix}.
 $$
 
 ---
@@ -1395,32 +1393,30 @@ For example, in cylindrical coordinates, the curl is:
 
 
 $$
-\det\left[
-\begin{array}{}
+\det
+\begin{bmatrix}
 \hat{r} & r\hat{\theta} & \hat{k} \\
 \frac{\partial}{\partial{r}} & \frac{\partial}{\partial{\theta}} & \frac{\partial}{\partial{z}} \\
 F_r & rF_\theta & F_z
-\end{array}
-\right]
+\end{bmatrix}
 $$
 
 Applying this to the function $F(r,\theta, z) = \hat{\theta}$ we get:
 
 
 $$
-\text{curl}(F) = \det\left[
-\begin{array}{}
+\text{curl}(F) = \det
+\begin{bmatrix}
 \hat{r} & r\hat{\theta} & \hat{k} \\
 \frac{\partial}{\partial{r}} & \frac{\partial}{\partial{\theta}} & \frac{\partial}{\partial{z}} \\
 0 & r & 0
-\end{array}
-\right] =
-\hat{k} \det\left[
-\begin{array}{}
+\end{bmatrix}
+=
+\hat{k} \det
+\begin{bmatrix}
 \frac{\partial}{\partial{r}} & \frac{\partial}{\partial{\theta}}\\
 0 & r
-\end{array}
-\right] =
+\end{bmatrix} =
 \hat{k}.
 $$
 
@@ -1646,13 +1642,12 @@ The curl then will then be
 
 
 $$
-\nabla\times{F} = \det \left[
-\begin{array}{}
+\nabla\times{F} = \det
+\begin{bmatrix}
 \hat{e}_r & r\sin\phi\hat{e}_\theta & r\hat{e}_\phi \\
 \frac{\partial}{\partial{r}} & \frac{\partial}{\partial{\theta}} & \frac{\partial}{\partial{phi}} \\
 F_r & r\sin\phi F_\theta & r F_\phi
-\end{array}
-\right].
+\end{bmatrix}.
 $$
 
 For a *radial* function $F = h(r)e_r$. (That is $F_r = h(r)$, $F_\theta=0$, and $F_\phi=0$. What is the curl of $F$?
