--- a/quarto/integral_vector_calculus/double_triple_integrals.qmd
+++ b/quarto/integral_vector_calculus/double_triple_integrals.qmd
@@ -46,8 +46,11 @@ The multidimensional case will prove to be similar where a Riemann sum is used t
 #| echo: false
 imgfile = "figures/chrysler-building-in-new-york.jpg"
 caption = """How to estimate the volume contained within the Chrysler Building? One way might be to break the building up into tall vertical blocks based on its skyline;  compute the volume of each block using the formula of volume as area of the base times the height; and, finally, adding up the computed volumes This is the basic idea of finding volumes under surfaces using Riemann integration."""
-ImageFile(:integral_vector_calculus, imgfile, caption)
+#ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![How to estimate the volume contained within the Chrysler Building? One way might be to break the building up into tall vertical blocks based on its skyline;  compute the volume of each block using the formula of volume as area of the base times the height; and, finally, adding up the computed volumes This is the basic idea of finding volumes under surfaces using Riemann integration.](./figures/chrysler-building-in-new-york.jpg)
 
 ```{julia}
 #| hold: true
@@ -57,8 +60,13 @@ caption = """
 Computing the volume of a nano-block construction of the Chrysler building is easier than trying to find an actual tree at the Chrysler building, as we can easily compute the volume of columns of equal-sized blocks. Riemann sums are similar.
 """
 
-ImageFile(:integral_vector_calculus, imgfile, caption)
+#ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![
+Computing the volume of a nano-block construction of the Chrysler building is easier than trying to find an actual tree at the Chrysler building, as we can easily compute the volume of columns of equal-sized blocks. Riemann sums are similar.
+](./figures/chrysler-nano-block.png)
 
 The definition of the  multi-dimensional integral is more involved then the one-dimensional case due to the possibly increased complexity of the region. This will require additional [steps](https://math.okstate.edu/people/lebl/osu4153-s16/chapter10-ver1.pdf). The basic approach is as follows.
 
@@ -410,8 +418,11 @@ In [Ferzola](https://doi.org/10.2307/2687130) we can read a summary of Euler's t
 imgfile ="figures/strang-slicing.png"
 caption = L"""Figure 14.2 of Strang illustrating the slice when either $x$ is fixed or $y$ is fixed. The inner integral computes the shared area, the outer integral adds the areas up to compute volume."""
 
-ImageFile(:integral_vector_calculus, imgfile, caption)
+# ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![Figure 14.2 of Strang illustrating the slice when either $x$ is fixed or $y$ is fixed. The inner integral computes the shared area, the outer integral adds the areas up to compute volume.](./figures/strang-slicing.png)
 
 In [Volumes](../integrals/volumes_slice.html) the formula for a volume with a known cross-sectional area is given by $V = \int_a^b CA(x) dx$. The inner integral, $\int_{R_x} f(x,y) dy$ is a function depending on $x$ that yields the area of the slice (where $R_x$ is the region sliced by the line of constant $x$ value). This is consistent with Euler's view of the iterated integral.
 
@@ -925,12 +936,12 @@ In [Katz](http://www.jstor.org/stable/2689856) a review of the history of "chang
 We view $R$ in two coordinate systems $(x,y)$ and $(u,v)$. We have that
 
 
-$$
-\begin{align}
+
+\begin{align*}
 dx &= A du + B dv\\
 dy &= C du + D dv,
-\end{align}
-$$
+\end{align*}
+
 
 where $A = \partial{x}/\partial{u}$, $B = \partial{x}/\partial{v}$, $C= \partial{y}/\partial{u}$, and $D = \partial{y}/\partial{v}$. Lagrange, following Euler, first sets $x$ to be constant (as is done in iterated integration). Hence, $dx = 0$ and so $du = -C(B/A) dv$ and, after substitution,  $dy = (D-C(B/A))dv$. Then Lagrange set $y$ to be a constant, so $dy = 0$ and hence $dv=0$ so $dx = Adu$. The area "element" $dx dy = A du \cdot (D - (B/A)) dv = (AD - BC) du dv$. Since areas and volumes are non-negative, the absolute value is used. With this, we have "$dxdy = |AD-BC|du dv$" as the analog of $dx = g'(u) du$.
 
@@ -938,12 +949,11 @@ where $A = \partial{x}/\partial{u}$, $B = \partial{x}/\partial{v}$, $C= \partial
 The expression $AD - BC$ was also derived by Euler, by related means. Lagrange extended the analysis to 3 dimensions. Before doing so, it is helpful to understand the problem from a geometric perspective. Euler was attempting to understand the effects of the following change of variable:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 x &= a + mt + \sqrt{1-m^2} v\\
 y & = b + \sqrt{1-m^2}t -mv
-\end{align}
-$$
+\end{align*}
 
 Euler knew this to be a clockwise *rotation* by an angle $\theta$ with $\cos(\theta) = m$,  a *reflection* through the $x$ axis, and a translation by $\langle a, b\rangle$. All these *should* preserve the area represented by $dx dy$, so he was *expecting* $dx dy = dt dv$.
 
@@ -953,8 +963,11 @@ Euler knew this to be a clockwise *rotation* by an angle $\theta$ with $\cos(\th
 #| echo: false
 imgfile ="figures/euler-rotation.png"
 caption = "Figure from Katz showing rotation of Euler."
-ImageFile(:integral_vector_calculus, imgfile, caption)
+# ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![Figure from Katz showing rotation of Euler.](figures/euler-rotation.png)
 
 The figure, taken from Katz, shows the translation, and rotation that should preserve area on a differential scale.
 
@@ -1047,28 +1060,25 @@ The arrows are the images of the standard unit vectors. We see some transformati
 
 
 $$
-\| \det\left(\left[
-\begin{array}{}
+\| \det\left(
+\begin{bmatrix}
 \hat{i} & \hat{j} & \hat{k}\\
 u_1 & u_2 & 0\\
 v_1 & v_2 & 0
-\end{array}
-\right]
+\end{bmatrix}
 \right) \|
 =
-\| \hat{k} \det\left(\left[
-\begin{array}{}
+\| \hat{k} \det\left(
+\begin{bmatrix}
 u_1 & u_2\\
 v_1 & v_2
-\end{array}
-\right]
+\end{bmatrix}
 \right) \|
-= | \det\left(\left[
-\begin{array}{}
+= | \det\left(
+\begin{bmatrix}
 u_1 & u_2\\
 v_1 & v_2
-\end{array}
-\right]
+\end{bmatrix}
 \right)|.
 $$
 
@@ -1108,12 +1118,11 @@ We have [seen](../differentiable_vector_calculus/polar_coordinates.html) how to 
 
 
 $$
-J_G = \left[
-\begin{array}{}
+J_G =
+\begin{bmatrix}
 \cos(\theta) & - r\sin(\theta)\\
 \sin(\theta) & r\cos(\theta)
-\end{array}
-\right],
+\end{bmatrix},
 $$
 
 with determinant $r$.
@@ -1156,24 +1165,20 @@ Some [transformations](https://en.wikipedia.org/wiki/Transformation_matrix#Examp
 
 
 $$
-\left[
-\begin{array}{}
+\begin{bmatrix}
 x\\
 y
-\end{array}
-\right] =
-\left[
-\begin{array}{}
+\end{bmatrix}
+=
+\begin{bmatrix}
 a & b\\
 c & d
-\end{array}
-\right]
-\left[
-\begin{array}{}
+\end{bmatrix}
+\begin{bmatrix}
 u\\
 v
-\end{array}
-\right],
+\end{bmatrix}
+,
 $$
 
 or $G(u,v) = \langle au+bv, cu+dv\rangle$. The Jacobian of this *linear* transformation is the matrix itself.
@@ -1219,12 +1224,10 @@ showG(G)
 
 $$
 \frac{1}{\| \vec{l} \|^2}
-\left[
-\begin{array}{}
+\begin{bmatrix}
 l_x^2 - l_y^2 & 2 l_x l_y\\
 2l_x l_y & l_y^2 - l_x^2
-\end{array}
-\right]
+\end{bmatrix}
 $$
 
 For some simple cases: $\langle l_x, l_y \rangle = \langle 1, 1\rangle$, the diagonal, this is $G(u,v) = (1/2) \langle 2v, 2u \rangle$; $\langle l_x, l_y \rangle = \langle 0, 1\rangle$ (the $y$-axis) this is $G(u,v) = \langle -u, v\rangle$.
@@ -1268,12 +1271,10 @@ The determinant of the Jacobian is
 
 $$
 \det(J_G) = \det\left(
-\left[
-\begin{array}{}
+\begin{bmatrix}
 1 & 0\\
 v & u
-\end{array}
-\right]
+\end{bmatrix}
 \right) = u.
 $$
 
@@ -1304,13 +1305,13 @@ What about other triangles, say the triangle bounded by $x=0$, $y=0$ and $y-x=1$
 This can be seen as a reflection through the line $x=1/2$ of the triangle above. If $G_1$ represents the mapping from $U [0,1]\times[0,1]$ into the triangle of the last problem, and $G_2$ represents the reflection through the line $x=1/2$, then the transformation $G_2 \circ G_1$ will map the box $U$ into the desired region. By the chain rule, we have:
 
 
-$$
+
 \begin{align*}
 \int_{(G_2\circ G_1)(U))} f dx &= \int_U (f\circ G_2 \circ G_1) |\det(J_{G_2 \circ G_1}| du \\
 &=
 \int_U (f\circ G_2 \circ G_1) |\det(J_{G_2}(G_1(u))||\det J_{G_1}(u)| du.
 \end{align*}
-$$
+
 
 (In  [Katz](http://www.jstor.org/stable/2689856) it is mentioned that Jacobi showed this in 1841.)
 
@@ -1449,7 +1450,7 @@ $$
 \int_{r=0}^1 r^2 dr \int_{\theta=0}^{\pi}\sin(\theta) = \frac{1}{3} \cdot 2.
 $$
 
-The third equals sign uses separability. The answer for $\bar{ is this value divided by the area, or $2/(3\pi)$.
+The third equals sign uses separability. The answer for $\bar{y}$ is this value divided by the area, or $2/(3\pi)$.
 
 
 ##### Example: Moment of inertia
@@ -1656,8 +1657,11 @@ $$
 imgfile = "figures/spherical-coordinates.png"
 caption = "Figure showing the parameterization by spherical coordinates. (Wikipedia)"
 
-ImageFile(:integral_vector_calculus, imgfile, caption)
+# ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![Figure showing the parameterization by spherical coordinates. (Wikipedia)](./figures/spherical-coordinates.png)
 
 The Jacobian can be computed to be $\rho^2\sin(\phi)$.
 
