--- a/quarto/integral_vector_calculus/line_integrals.qmd
+++ b/quarto/integral_vector_calculus/line_integrals.qmd
@@ -611,8 +611,12 @@ imgfile = "figures/kapoor-cloud-gate.jpg"
 caption = """
 The Anish Kapoor sculpture Cloud Gate maps the Cartesian grid formed by its concrete resting pad onto a curved surface showing the local distortions.  Knowing the areas of the reflected grid after distortion would allow the computation of the surface area of the sculpture through addition. (Wikipedia)
 """
-ImageFile(:integral_vector_calculus, imgfile, caption)
+#ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![The Anish Kapoor sculpture Cloud Gate maps the Cartesian grid formed by its concrete resting pad onto a curved surface showing the local distortions.  Knowing the areas of the reflected grid after distortion would allow the computation of the surface area of the sculpture through addition. (Wikipedia)
+](./figures/kapoor-cloud-gate.jpg)
 
 We next turn attention to a generalization of line integrals to surface integrals. Surfaces were described in one of three ways: directly through a function as $z=f(x,y)$, as a level curve through $f(x,y,z) = c$, and parameterized through a function $\Phi: R^2 \rightarrow R^3$. The level curve description is locally a function description, and the function description leads to a parameterization ($\Phi(u,v) = \langle u,v,f(u,v)\rangle$) so we restrict to the parameterized case.
 
