--- a/quarto/integral_vector_calculus/review.qmd
+++ b/quarto/integral_vector_calculus/review.qmd
@@ -98,13 +98,13 @@ In dimension $m=3$, the **binormal** vector, $\hat{B}$, is the unit vector $\hat
 The [Frenet-Serret]() formulas define the **curvature**, $\kappa$,  and the **torsion**, $\tau$, by
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{d\hat{T}}{ds} &=  & \kappa \hat{N} &\\
 \frac{d\hat{N}}{ds} &= -\kappa\hat{T} & & + \tau\hat{B}\\
 \frac{d\hat{B}}{ds} &= & -\tau\hat{N}&
-\end{align}
-$$
+\end{align*}
+
 
 These formulas apply in dimension $m=2$ with $\hat{B}=\vec{0}$.
 
@@ -121,14 +121,14 @@ The chain rule says $(\vec{r}(g(t))' = \vec{r}'(g(t)) g'(t)$.
 A scalar function, $f:R^n\rightarrow R$, $n > 1$ has a **partial derivative** defined. For $n=2$, these are:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{\partial{f}}{\partial{x}}(x,y) &=
 \lim_{h\rightarrow 0} \frac{f(x+h,y)-f(x,y)}{h}\\
 \frac{\partial{f}}{\partial{y}}(x,y) &=
 \lim_{h\rightarrow 0} \frac{f(x,y+h)-f(x,y)}{h}.
-\end{align}
-$$
+\end{align*}
+
 
 The generalization to $n>2$ is clear - the partial derivative in $x_i$ is the derivative of $f$ when the *other* $x_j$ are held constant.
 
@@ -198,14 +198,13 @@ For $F=\langle f_1, f_2, \dots, f_m\rangle$ the total derivative is the  **Jacob
 
 
 $$
-J_f = \left[
-\begin{align}{}
+J_f =
+\begin{bmatrix}
 \frac{\partial f_1}{\partial x_1} &\quad \frac{\partial f_1}{\partial x_2} &\dots&\quad\frac{\partial f_1}{\partial x_n}\\
 \frac{\partial f_2}{\partial x_1} &\quad \frac{\partial f_2}{\partial x_2} &\dots&\quad\frac{\partial f_2}{\partial x_n}\\
 &&\vdots&\\
 \frac{\partial f_m}{\partial x_1} &\quad \frac{\partial f_m}{\partial x_2} &\dots&\quad\frac{\partial f_m}{\partial x_n}
-\end{align}
-\right].
+\end{bmatrix}.
 $$
 
 This can be viewed as being comprised of row vectors, each being the individual gradients; or as column vectors each being the vector of partial derivatives for a given variable.
@@ -225,7 +224,7 @@ A scalar function $f:R^n \rightarrow R$ and a parameterized curve $\vec{r}:R\rig
 
 
 $$
-d_f(\vec{r}) d_\vec{r} = \nabla{f}(\vec{r}(t))' \vec{r}'(t) =
+d_f(\vec{r}) d\vec{r} = \nabla{f}(\vec{r}(t))' \vec{r}'(t) =
 \nabla{f}(\vec{r}(t)) \cdot \vec{r}'(t),
 $$
 
@@ -356,29 +355,29 @@ $$
 In two dimensions, we have the following interpretations:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \iint_R dA &= \text{area of } R\\
 \iint_R \rho dA &= \text{mass with constant density }\rho\\
 \iint_R \rho(x,y) dA &= \text{mass of region with density }\rho\\
 \frac{1}{\text{area}}\iint_R x \rho(x,y)dA &= \text{centroid of region in } x \text{ direction}\\
 \frac{1}{\text{area}}\iint_R y \rho(x,y)dA &= \text{centroid of region in } y \text{ direction}
-\end{align}
-$$
+\end{align*}
+
 
 In three dimensions, we have the following interpretations:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \iint_VdV &= \text{volume of } V\\
 \iint_V \rho dV &= \text{mass with constant density }\rho\\
 \iint_V \rho(x,y) dV &= \text{mass of volume with density }\rho\\
 \frac{1}{\text{volume}}\iint_V x \rho(x,y)dV &= \text{centroid of volume in } x \text{ direction}\\
 \frac{1}{\text{volume}}\iint_V y \rho(x,y)dV &= \text{centroid of volume in } y \text{ direction}\\
 \frac{1}{\text{volume}}\iint_V z \rho(x,y)dV &= \text{centroid of volume in } z \text{ direction}
-\end{align}
-$$
+\end{align*}
+
 
 To compute integrals over non-box-like regions, Fubini's theorem may be utilized. Alternatively, a **transformation** of variables
 
