--- a/quarto/integral_vector_calculus/stokes_theorem.qmd
+++ b/quarto/integral_vector_calculus/stokes_theorem.qmd
@@ -270,12 +270,12 @@ r(t) = [a*cos(t),b*sin(t)]
 To compute the area of the triangle with vertices $(0,0)$, $(a,0)$ and $(0,b)$ we can orient the boundary counter clockwise. Let $A$ be the line segment from $(0,b)$ to $(0,0)$, $B$ be the line segment from $(0,0)$ to $(a,0)$, and $C$ be the other. Then
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{1}{2} \int_A F\cdot\hat{T} ds &=\frac{1}{2} \int_A -ydx = 0\\
 \frac{1}{2} \int_B F\cdot\hat{T} ds &=\frac{1}{2} \int_B xdy = 0,
-\end{align}
-$$
+\end{align*}
+
 
 as on $A$, $y=0$ and $dy=0$ and on $B$, $x=0$ and $dx=0$.
 
@@ -310,7 +310,7 @@ For the two dimensional case the curl is a scalar. *If* $F = \langle F_x, F_y\ra
 Now assume $\partial{F_y}/\partial{x} - \partial{F_x}/\partial{y} = 0$. Let $P$ and $Q$ be two points in the plane. Take any path, $C_1$ from $P$ to $Q$ and any return path, $C_2$, from $Q$ to $P$ that do not cross and such that $C$, the concatenation of the two paths, satisfies Green's theorem. Then, as $F$ is continuous on an open interval containing $D$, we have:
 
 
-$$
+
 \begin{align*}
 0 &= \iint_D 0 dA \\
 &=
@@ -320,7 +320,7 @@ $$
 &=
 \int_{C_1} F \cdot \hat{T} ds + \int_{C_2}F \cdot \hat{T} ds.
 \end{align*}
-$$
+
 
 Reversing $C_2$ to go from $P$ to $Q$, we see the two work integrals are identical, that is the field is conservative.
 
@@ -338,14 +338,14 @@ For example, let $F(x,y) = \langle \sin(xy), \cos(xy) \rangle$. Is this a conser
 We can check by taking partial derivatives. Those of interest are:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \frac{\partial{F_y}}{\partial{x}} &= \frac{\partial{(\cos(xy))}}{\partial{x}} =
 -\sin(xy) y,\\
 \frac{\partial{F_x}}{\partial{y}} &= \frac{\partial{(\sin(xy))}}{\partial{y}} =
 \cos(xy)x.
-\end{align}
-$$
+\end{align*}
+
 
 It is not the case that  $\partial{F_y}/\partial{x} - \partial{F_x}/\partial{y}=0$, so this vector field is *not* conservative.
 
@@ -416,25 +416,25 @@ p
 Let $A$ label the red line, $B$ the green curve, $C$ the blue line, and $D$ the black line. Then the area is given from Green's theorem by considering half of the the line integral of $F(x,y) = \langle -y, x\rangle$ or $\oint_C (xdy - ydx)$. To that matter we have:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \int_A (xdy - ydx) &= a f(a)\\
 \int_C (xdy - ydx) &= b(-f(b))\\
 \int_D (xdy - ydx) &= 0\\
-\end{align}
-$$
+\end{align*}
+
 
 Finally the integral over $B$, using integration by parts:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \int_B F(\vec{r}(t))\cdot \frac{d\vec{r}(t)}{dt} dt &=
 \int_b^a \langle -f(t),t)\rangle\cdot\langle 1, f'(t)\rangle dt\\
 &= \int_a^b f(t)dt - \int_a^b tf'(t)dt\\
 &= \int_a^b f(t)dt - \left(tf(t)\mid_a^b - \int_a^b f(t) dt\right).
-\end{align}
-$$
+\end{align*}
+
 
 Combining, we have after cancellation $\oint (xdy - ydx) = 2\int_a^b f(t) dt$, or after dividing by $2$ the signed area under the curve.
 
@@ -469,16 +469,16 @@ The cut leads to a counter-clockwise orientation  on the outer ring and a clockw
 To see that the area integral of $F(x,y) = (1/2)\langle -y, x\rangle$ produces the area for this orientation we have, using $C_1$ as the outer ring, and $C_2$ as the inner ring:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \oint_{C_1} F \cdot \hat{T} ds &=
 \int_0^{2\pi} (1/2)(2)\langle -\sin(t), \cos(t)\rangle \cdot (2)\langle-\sin(t), \cos(t)\rangle dt \\
 &= (1/2) (2\pi) 4 = 4\pi\\
 \oint_{C_2} F \cdot \hat{T} ds &=
 \int_{0}^{2\pi}  (1/2) \langle \sin(t), \cos(t)\rangle \cdot \langle-\sin(t), -\cos(t)\rangle dt\\
 &= -(1/2)(2\pi) = -\pi.
-\end{align}
-$$
+\end{align*}
+
 
 (Using $\vec{r}(t) = 2\langle \cos(t), \sin(t)\rangle$ for the outer ring and $\vec{r}(t) = 1\langle \cos(t), -\sin(t)\rangle$ for the inner ring.)
 
@@ -716,8 +716,12 @@ imgfile ="figures/jiffy-pop.png"
 caption ="""
 The Jiffy Pop popcorn design has a top surface that is designed to expand to accommodate the popped popcorn. Viewed as a surface, the surface area grows, but the boundary - where the surface meets the pan - stays the same. This is an example that many different surfaces can have the same bounding curve. Stokes' theorem will relate a surface integral over the surface to a line integral about the bounding curve.
 """
-ImageFile(:integral_vector_calculus, imgfile, caption)
+# ImageFile(:integral_vector_calculus, imgfile, caption)
+nothing
 ```
+
+![The Jiffy Pop popcorn design has a top surface that is designed to expand to accommodate the popped popcorn. Viewed as a surface, the surface area grows, but the boundary - where the surface meets the pan - stays the same. This is an example that many different surfaces can have the same bounding curve. Stokes' theorem will relate a surface integral over the surface to a line integral about the bounding curve.
+](./figures/jiffy-pop.png)
 
 Were the figure of Jiffy Pop popcorn animated, the surface of foil would slowly expand due to pressure of popping popcorn until the popcorn was ready. However, the boundary would remain the same. Many different surfaces can have the same boundary. Take for instance the upper half unit sphere in $R^3$ it having the curve $x^2 + y^2 = 1$ as a boundary curve. This is the same curve as the surface of the cone $z = 1 - (x^2 + y^2)$ that lies above the $x-y$ plane. This would also be the same curve as the surface formed by a Mickey Mouse glove if the collar were scaled and positioned onto the unit circle.
 
@@ -736,7 +740,7 @@ $$
 This gives the series of approximations:
 
 
-$$
+
 \begin{align*}
 \oint_C F\cdot\hat{T} ds &=
 \sum \oint_{C_i} F\cdot\hat{T} ds \\
@@ -747,7 +751,7 @@ $$
 &\approx
 \iint_S \nabla\times{F}\cdot\hat{N} dS.
 \end{align*}
-$$
+
 
 In terms of our expanding popcorn, the boundary integral - after accounting for cancellations, as in Green's theorem - can be seen as a microscopic sum of boundary integrals each of which is approximated by a term $\nabla\times{F}\cdot\hat{N} \Delta{S}$ which is viewed as a Riemann sum approximation for the the integral of the curl over the surface. The cancellation depends on a proper choice of orientation, but with that we have:
 
@@ -1127,13 +1131,13 @@ The divergence theorem provides two means to compute a value, the point here is 
 Following Schey, we now consider a continuous analog to the crowd counting problem through a flow with a non-uniform density that may vary in time. Let $\rho(x,y,z;t)$ be the time-varying density and $v(x,y,z;t)$ be a vector field indicating the direction of flow. Consider some three-dimensional volume, $V$, with boundary $S$ (though two-dimensional would also be applicable). Then these integrals have interpretations:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \iiint_V \rho dV &&\quad\text{Amount contained within }V\\
 \frac{\partial}{\partial{t}} \iiint_V \rho dV &=
 \iiint_V \frac{\partial{\rho}}{\partial{t}} dV &\quad\text{Change in time of amount contained within }V
-\end{align}
-$$
+\end{align*}
+
 
 Moving the derivative inside the integral requires an assumption of continuity. Assume the material is *conserved*, meaning that if the amount in the volume $V$ changes it must  flow in and out through the boundary. The flow out through $S$, the boundary of $V$, is
 
