--- a/quarto/integrals/arc_length.qmd
+++ b/quarto/integrals/arc_length.qmd
@@ -26,8 +26,12 @@ caption = """
 A kids' jump rope by Lifeline is comprised of little plastic segments of uniform length around a cord. The length of the rope can be computed by adding up the lengths of each segment, regardless of how the rope is arranged.
 
 """
-ImageFile(:integrals, imgfile, caption)
+# ImageFile(:integrals, imgfile, caption)
+nothing
 ```
+
+![A kids' jump rope by Lifeline is comprised of little plastic segments of uniform length around a cord. The length of the rope can be computed by adding up the lengths of each segment, regardless of how the rope is arranged.
+](./figures/jump-rope.png)
 
 The length of the jump rope in the picture can be computed by either looking at the packaging it came in, or measuring the length of each plastic segment and multiplying by the number of segments. The former is easier, the latter provides the intuition as to how we can find the length of curves in the $x-y$ plane. The idea is old, [Archimedes](http://www.maa.org/external_archive/joma/Volume7/Aktumen/Polygon.html) used fixed length segments of polygons to approximate $\pi$ using the circumference of circle producing the bounds $3~\frac{1}{7} > \pi > 3~\frac{10}{71}$.
 
@@ -64,7 +68,6 @@ To see why, any partition of the interval $[a,b]$ by $a = t_0 < t_1 < \cdots < t
 ```{julia}
 #| hold: false
 #| echo: false
-#| cache: true
 ## {{{arclength_graph}}}
 function make_arclength_graph(n)
 
@@ -120,7 +123,7 @@ $$
 But looking at each term, we can push the denominator into the square root as:
 
 
-$$
+
 \begin{align*}
 d_i &= d_i \cdot \frac{t_i - t_{i-1}}{t_i - t_{i-1}}
 \\
@@ -128,7 +131,7 @@ d_i &= d_i \cdot \frac{t_i - t_{i-1}}{t_i - t_{i-1}}
 \left(\frac{f(t_i)-f(t_{i-1})}{t_i-t_{i-1}}\right)^2} \cdot (t_i - t_{i-1}) \\
 &= \sqrt{ g'(\xi_i)^2 + f'(\psi_i)^2} \cdot (t_i - t_{i-1}).
 \end{align*}
-$$
+
 
 The values $\xi_i$ and $\psi_i$ are guaranteed by the mean value theorem and must be in $[t_{i-1}, t_i]$.
 
@@ -257,8 +260,11 @@ This picture of Jasper John's [Near the Lagoon](http://www.artic.edu/aic/collect
 #| echo: false
 imgfile = "figures/johns-catenary.jpg"
 caption = "One of Jasper Johns' Catenary series. Art Institute of Chicago."
-ImageFile(:integrals, imgfile, caption)
+# ImageFile(:integrals, imgfile, caption)
+nothing
 ```
+
+![One of Jasper Johns' Catenary series. Art Institute of Chicago.](./figures/johns-catenary.jpg)
 
 The museum notes have
 
@@ -342,8 +348,11 @@ imgfile="figures/verrazzano-unloaded.jpg"
 caption = """
 The Verrazzano-Narrows Bridge during construction. The unloaded suspension cables form a catenary.
 """
-ImageFile(:integrals, imgfile, caption)
+# ImageFile(:integrals, imgfile, caption)
+nothing
 ```
+
+![The Verrazzano-Narrows Bridge during construction. The unloaded suspension cables form a catenary.](./figures/verrazzano-unloaded.jpg)
 
 ```{julia}
 #| hold: true
@@ -352,8 +361,12 @@ imgfile="figures/verrazzano-loaded.jpg"
 caption = """
 A rendering of the Verrazzano-Narrows Bridge after construction (cf. [nycgovparks.org](https://www.nycgovparks.org/highlights/verrazano-bridge)). The uniformly loaded suspension cables would form a parabola, presumably a fact the artist of this rendering knew. (The spelling in the link is not the official spelling, which carries two zs.)
 """
-ImageFile(:integrals, imgfile, caption)
+# ImageFile(:integrals, imgfile, caption)
+nothing
 ```
+
+![A rendering of the Verrazzano-Narrows Bridge after construction (cf. [nycgovparks.org](https://www.nycgovparks.org/highlights/verrazano-bridge)). The uniformly loaded suspension cables would form a parabola, presumably a fact the artist of this rendering knew. (The spelling in the link is not the official spelling, which carries two zs.)
+](./figures/verrazzano-loaded.jpg)
 
 ##### Example
 
@@ -361,12 +374,12 @@ ImageFile(:integrals, imgfile, caption)
 The [nephroid](http://www-history.mcs.st-and.ac.uk/Curves/Nephroid.html) is a curve that can be described parametrically by
 
 
-$$
+
 \begin{align*}
 g(t) &= a(3\cos(t) - \cos(3t)), \\
 f(t) &= a(3\sin(t) - \sin(3t)).
 \end{align*}
-$$
+
 
 Taking $a=1$ we have this graph:
 
@@ -391,7 +404,7 @@ quadgk(t -> sqrt(𝒈'(t)^2 + 𝒇'(t)^2), 0, 2pi)[1]
 The answer seems like a floating point approximation of $24$, which  suggests that  this integral is tractable. Pursuing this, the integrand simplifies:
 
 
-$$
+
 \begin{align*}
 \sqrt{g'(t)^2 + f'(t)^2}
 &= \sqrt{(-3\sin(t) + 3\sin(3t))^2 + (3\cos(t) - 3\cos(3t))^2} \\
@@ -401,7 +414,7 @@ $$
 &= 3\sqrt{2}\sqrt{1 - \cos(2t)}\\
 &= 3\sqrt{2}\sqrt{2\sin(t)^2}.
 \end{align*}
-$$
+
 
 The second to last line comes from a double angle formula expansion of $\cos(3t - t)$ and the last line from the half angle formula for $\cos$.
 
@@ -423,6 +436,7 @@ The following link shows how the perimeter of a complex figure relates to the pe
 tweet = """
 <blockquote class="twitter-tweet"><p lang="en" dir="ltr">How cookie cutters are made <a href="https://t.co/eumfwH4Ixl">pic.twitter.com/eumfwH4Ixl</a></p>&mdash; How Things Are Manufactured (@fastworkers6) <a href="https://twitter.com/fastworkers6/status/1556214840909111296?ref_src=twsrc%5Etfw">August 7, 2022</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 """
+
 HTMLoutput(tweet)
 ```
 
@@ -435,14 +449,14 @@ A teacher of small children assigns his students the task of computing the lengt
 Mathematically, suppose a curve is described parametrically by $(g(t), f(t))$ for $a \leq t \leq b$. A new parameterization is provided by $\gamma(t)$. Suppose $\gamma$ is strictly increasing, so that an inverse function exists. (This assumption is implicitly made by the teacher, as it implies the student won't start counting in the wrong direction.) Then the same curve is described by composition through $(g(\gamma(u)), f(\gamma(u)))$, $\gamma^{-1}(a) \leq u \leq \gamma^{-1}(b)$. That the arc length is the same follows from substitution:
 
 
-$$
+
 \begin{align*}
 \int_{\gamma^{-1}(a)}^{\gamma^{-1}(b)} \sqrt{([g(\gamma(t))]')^2 + ([f(\gamma(t))]')^2} dt
 &=\int_{\gamma^{-1}(a)}^{\gamma^{-1}(b)} \sqrt{(g'(\gamma(t) )\gamma'(t))^2 + (f'(\gamma(t) )\gamma'(t))^2 } dt \\
 &=\int_{\gamma^{-1}(a)}^{\gamma^{-1}(b)} \sqrt{g'(\gamma(t))^2 + f'(\gamma(t))^2} \gamma'(t) dt\\
 &=\int_a^b \sqrt{g'(u)^2 + f'(u)^2} du = L
 \end{align*}
-$$
+
 
 (Using $u=\gamma(t)$ for the substitution.)
 
@@ -466,13 +480,13 @@ For a simple example, we have $g(t) = R\cos(t)$ and $f(t)=R\sin(t)$ parameterizi
 What looks at first glance to be just a slightly more complicated equation is that of an ellipse, with $g(t) = a\cos(t)$ and $f(t) = b\sin(t)$. Taking $a=1$ and $b = a + c$, for $c > 0$ we get the equation for the arc length as a function of $t$ is just
 
 
-$$
+
 \begin{align*}
 s(u) &= \int_0^u \sqrt{(-\sin(t))^2 + b\cos(t)^2} dt\\
      &= \int_0^u \sqrt{\sin(t))^2 + \cos(t)^2 + c\cos(t)^2} dt  \\
 	 &=\int_0^u \sqrt{1 + c\cos(t)^2} dt.
 \end{align*}
-$$
+
 
 But, despite it not looking too daunting, this integral is not tractable through our techniques and has an answer involving elliptic integrals. We can work numerically though. Letting $a=1$ and $b=2$, we have the arc length is given by:
 
@@ -571,12 +585,12 @@ $$
 So
 
 
-$$
+
 \begin{align*}
 \int_0^1 (tf'(u) + (1-t)f'(v)) dt &< \int_0^1 f'(tu + (1-t)v) dt, \text{or}\\
 \frac{f'(u) + f'(v)}{2} &< \frac{1}{v-u}\int_u^v f'(w) dw,
 \end{align*}
-$$
+
 
 by the substitution $w = tu + (1-t)v$. Using the fundamental theorem of calculus to compute the mean value of the integral of $f'$ over $[u,v]$ gives the following as a consequence of strict concavity of $f'$:
 
@@ -667,25 +681,25 @@ which holds by the strict concavity of $f'$, as found previously.
 Using the substitution $x = f_i^{-1}(u)$ as needed to see:
 
 
-$$
+
 \begin{align*}
 \int_a^u f(x) dx &= \int_0^{f(u)} u [f_1^{-1}]'(u) du \\
 &> -\int_0^h u [f_2^{-1}]'(u) du \\
 &= \int_h^0 u [f_2^{-1}]'(u) du \\
 &= \int_v^b f(x) dx.
 \end{align*}
-$$
+
 
 For the latter claim, integrating in the $y$ variable gives
 
 
-$$
+
 \begin{align*}
 \int_u^c (f(x)-h) dx &= \int_h^m (c - f_1^{-1}(y)) dy\\
 &> \int_h^m (c - f_2^{-1}(y)) dy\\
 &= \int_c^v (f(x)-h) dx
 \end{align*}
-$$
+
 
 Now, the area under $h$ over $[u,c]$ is greater than that over $[c,v]$ as $(u+v)/2 < c$ or $v-c < c-u$. That means the area under $f$ over $[u,c]$ is greater than that over $[c,v]$.
 
@@ -707,7 +721,7 @@ or $\phi'(z) < 0$. Moreover, we have by the first assertion that $f'(z) < -f'(\p
 Using the substitution $x = \phi(z)$ gives:
 
 
-$$
+
 \begin{align*}
 \int_v^b \sqrt{1 + f'(x)^2} dx &=
 \int_u^a \sqrt{1 + f'(\phi(z))^2} \phi'(z) dz\\
@@ -716,7 +730,7 @@ $$
 &= \int_a^u \sqrt{\phi'(z)^2 + f'(z)^2} dz\\
 &< \int_a^u \sqrt{1 + f'(z)^2} dz
 \end{align*}
-$$
+
 
 Letting $h=f(u) \rightarrow c$ we get the *inequality*
 
@@ -765,12 +779,12 @@ $$
 with the case above corresponding to $W = -m(k/m)$. The set of equations then satisfy:
 
 
-$$
+
 \begin{align*}
 x''(t) &= - W(t,x(t), x'(t), y(t), y'(t)) \cdot x'(t)\\
 y''(t) &= -g - W(t,x(t), x'(t), y(t), y'(t)) \cdot y'(t)\\
 \end{align*}
-$$
+
 
 with initial conditions: $x(0) = y(0) = 0$ and $x'(0) = v_0 \cos(\theta), y'(0) = v_0 \sin(\theta)$.
 
@@ -778,28 +792,28 @@ with initial conditions: $x(0) = y(0) = 0$ and $x'(0) = v_0 \cos(\theta), y'(0) 
 Only with certain drag forces, can this set of equations be be solved exactly, though it can be approximated numerically for admissible $W$, but if $W$ is strictly positive then it can be shown $x(t)$ is increasing on $[0, x_\infty)$ and so invertible, and $f(u) = y(x^{-1}(u))$ is three times differentiable with both $f$ and $f'$ being strictly concave, as it can be shown that (say $x(v) = u$ so $dv/du = 1/x'(v) > 0$):
 
 
-$$
+
 \begin{align*}
 f''(u) &= -\frac{g}{x'(v)^2} < 0\\
 f'''(u) &= \frac{2gx''(v)}{x'(v)^3} \\
 &= -\frac{2gW}{x'(v)^2}  \cdot \frac{dv}{du} < 0
 \end{align*}
-$$
+
 
 The latter by differentiating, the former a consequence of the following formulas for derivatives of inverse functions
 
 
-$$
+
 \begin{align*}
 [x^{-1}]'(u) &= 1 / x'(v) \\
 [x^{-1}]''(u) &= -x''(v)/(x'(v))^3
 \end{align*}
-$$
+
 
 For then
 
 
-$$
+
 \begin{align*}
 f(u)   &= y(x^{-1}(u)) \\
 f'(u)  &= y'(x^{-1}(u)) \cdot {x^{-1}}'(u) \\
@@ -808,7 +822,7 @@ f''(u) &= y''(x^{-1}(u))\cdot[x^{-1}]'(u)^2 + y'(x^{-1}(u)) \cdot [x^{-1}]''(u) 
        &= -g/(x'(v))^2 - W y'/(x'(v))^2 - y'(v) \cdot (- W \cdot x'(v)) / x'(v)^3\\
        &= -g/x'(v)^2.
 \end{align*}
-$$
+
 
 ## Questions
 
