--- a/quarto/integrals/area.qmd
+++ b/quarto/integrals/area.qmd
@@ -74,7 +74,6 @@ In a previous section, we saw this animation:
 ```{julia}
 #| hold: true
 #| echo: false
-#| cache: true
 ## {{{archimedes_parabola}}}
 
 
@@ -154,9 +153,15 @@ approximations by geometric figures with known area is the basis of
 Riemann sums.
 
 """
-ImageFile(:integrals, imgfile, caption)
+#ImageFile(:integrals, imgfile, caption)
 nothing
 ```
+
+![Figure of Beeckman (1618) showing a means to compute the area under a
+curve, in this example the line connecting points $A$ and $B$. Using
+approximations by geometric figures with known area is the basis of
+Riemann sums.
+](./figures/beeckman-1618.png)
 
 Beeckman actually did more than find the area. He generalized the relationship of rate $\times$ time $=$ distance. The line was interpreting a velocity, the "squares", then, provided an approximate distance traveled when the velocity is taken as a constant on the small time interval. Then the distance traveled can be approximated by a smaller quantity - just add the area of the rectangles squarely within the desired area ($6+16+6$) - and a larger quantity - by including all rectangles that have a portion of their area within the desired area ($10 + 16 + 10$). Beeckman argued that the error vanishes as the rectangles get smaller.
 
@@ -222,7 +227,7 @@ To successfully compute a good approximation for the area, we would need to choo
 For Archimedes' problem - finding the area under $f(x)=x^2$ between $0$ and $1$ -  if we take as a partition $x_i = i/n$ and $c_i = x_i$, then the above sum becomes:
 
 
-$$
+
 \begin{align*}
 S_n &= f(c_1) \cdot (x_1 - x_0) + f(c_2) \cdot (x_2 - x_1) + \cdots + f(c_n) \cdot (x_n - x_{n-1})\\
 &= (x_1)^2 \cdot \frac{1}{n} + (x_2)^2 \cdot \frac{1}{n} + \cdot + (x_n)^2 \cdot \frac{1}{n}\\
@@ -230,7 +235,7 @@ S_n &= f(c_1) \cdot (x_1 - x_0) + f(c_2) \cdot (x_2 - x_1) + \cdots + f(c_n) \cd
 &= \frac{1}{n^3} \cdot (1^2 + 2^2 + \cdots + n^2) \\
 &= \frac{1}{n^3} \cdot \frac{n\cdot(n-1)\cdot(2n+1)}{6}.
 \end{align*}
-$$
+
 
 The latter uses a well-known formula for the sum of squares of the first $n$ natural numbers.
 
@@ -460,7 +465,7 @@ Using the definition, we can compute a few definite integrals:
 This is just the area of a trapezoid with heights $a$ and $b$ and side   length $b-a$, or $1/2 \cdot (b + a) \cdot (b - a)$. The right sum   would be:
 
 
-$$
+
 \begin{align*}
 S &= x_1 \cdot (x_1 - x_0) + x_2 \cdot (x_2 - x_1) + \cdots x_n \cdot (x_n - x_{n-1}) \\
 &= (a + 1\frac{b-a}{n}) \cdot \frac{b-a}{n} + (a + 2\frac{b-a}{n}) \cdot \frac{b-a}{n} + \cdots  (a + n\frac{b-a}{n}) \cdot \frac{b-a}{n}\\
@@ -469,7 +474,7 @@ S &= x_1 \cdot (x_1 - x_0) + x_2 \cdot (x_2 - x_1) + \cdots x_n \cdot (x_n - x_{
 & \rightarrow a \cdot(b-a) + \frac{(b-a)^2}{2} \\
 &= \frac{b^2}{2} - \frac{a^2}{2}.
 \end{align*}
-$$
+
 
 > $$
 > \int_a^b x^2 dx = \frac{b^3}{3} - \frac{a^3}{3}.
@@ -491,7 +496,7 @@ This is similar to the Archimedes case with $a=0$ and $b=1$ shown above.
 Cauchy showed this using a *geometric series* for the partition, not the arithmetic series $x_i = a + i (b-a)/n$. The series defined by $1 + \alpha = (b/a)^{1/n}$, then $x_i = a \cdot (1 + \alpha)^i$. Here the bases $x_{i+1} - x_i$ simplify to $x_i \cdot \alpha$ and $f(x_i) = (a\cdot(1+\alpha)^i)^k = a^k (1+\alpha)^{ik}$, or $f(x_i)(x_{i+1}-x_i) = a^{k+1}\alpha[(1+\alpha)^{k+1}]^i$, so, using $u=(1+\alpha)^{k+1}=(b/a)^{(k+1)/n}$, $f(x_i) \cdot(x_{i+1} - x_i) = a^{k+1}\alpha u^i$. This gives
 
 
-$$
+
 \begin{align*}
 S &= a^{k+1}\alpha u^0 + a^{k+1}\alpha u^1 + \cdots + a^{k+1}\alpha u^{n-1}
 &= a^{k+1} \cdot \alpha \cdot (u^0 + u^1 + \cdot u^{n-1}) \\
@@ -499,7 +504,7 @@ S &= a^{k+1}\alpha u^0 + a^{k+1}\alpha u^1 + \cdots + a^{k+1}\alpha u^{n-1}
 &= (b^{k+1} - a^{k+1}) \cdot \frac{\alpha}{(1+\alpha)^{k+1} - 1} \\
 &\rightarrow \frac{b^{k+1} - a^{k+1}}{k+1}.
 \end{align*}
-$$
+
 
 > $$
 > \int_a^b x^{-1} dx = \log(b) - \log(a), \quad (0 < a < b).
@@ -761,14 +766,12 @@ So $\pi$ is about `2a`.
 We have the well-known triangle [inequality](http://en.wikipedia.org/wiki/Triangle_inequality) which says for an individual sum: $\lvert a + b \rvert \leq \lvert a \rvert +\lvert b \rvert$. Applying this recursively to a partition with $a < b$ gives:
 
 
-$$
-\begin{align*}
-\lvert f(c_1)(x_1-x_0) + f(c_2)(x_2-x_1) + \cdots + f(c_n) (x_n-x_1) \rvert
-& \leq
+\begin{multline*}
+\lvert f(c_1)(x_1-x_0) + f(c_2)(x_2-x_1) + \cdots + f(c_n) (x_n-x_1) \rvert\\
+\leq
 \lvert f(c_1)(x_1-x_0) \rvert + \lvert f(c_2)(x_2-x_1)\rvert + \cdots +\lvert f(c_n) (x_n-x_1) \rvert \\
-&= \lvert f(c_1)\rvert (x_1-x_0) + \lvert f(c_2)\rvert (x_2-x_1)+ \cdots +\lvert f(c_n) \rvert(x_n-x_1).
-\end{align*}
-$$
+= \lvert f(c_1)\rvert (x_1-x_0) + \lvert f(c_2)\rvert (x_2-x_1)+ \cdots +\lvert f(c_n) \rvert(x_n-x_1).
+\end{multline*}
 
 This suggests that the following inequality holds for integrals:
 
@@ -793,7 +796,7 @@ While such bounds are disappointing, often, when looking for specific values, th
 The Riemann sum above is actually extremely inefficient. To see how much, we can derive an estimate for the error in approximating the value using an arithmetic progression as the partition. Let's assume that our function $f(x)$ is increasing, so that the right sum gives an upper estimate and the left sum a lower estimate, so the error in the estimate will be between these two values:
 
 
-$$
+
 \begin{align*}
 \text{error} &\leq
 \left[
@@ -803,7 +806,7 @@ f(x_1) \cdot (x_{1} - x_0)  + f(x_2) \cdot  (x_{2} - x_1) + \cdots + f(x_{n-1})(
 &= \frac{b-a}{n} \cdot (\left[f(x_1) + f(x_2) + \cdots f(x_n)\right] - \left[f(x_0) + \cdots f(x_{n-1})\right]) \\
 &= \frac{b-a}{n} \cdot (f(b) - f(a)).
 \end{align*}
-$$
+
 
 We see the error goes to $0$ at a rate of $1/n$ with the constant depending on $b-a$ and the function $f$. In general, a similar bound holds when $f$ is not monotonic.
 
@@ -847,12 +850,12 @@ This formula will actually be exact for any 3rd degree polynomial. In fact an en
 The formulas for an approximation to the integral $\int_{-1}^1 f(x) dx$ discussed so far can be written as:
 
 
-$$
+
 \begin{align*}
 S &= f(x_1) \Delta_1 + f(x_2) \Delta_2 + \cdots + f(x_n) \Delta_n\\
   &= w_1 f(x_1) + w_2 f(x_2) + \cdots + w_n f(x_n).
 \end{align*}
-$$
+
 
 The $w$s are "weights" and the $x$s are nodes. A [Gaussian](http://en.wikipedia.org/wiki/Gaussian_quadrature) *quadrature rule* is a set of weights and nodes for $i=1, \dots n$ for which the sum is *exact* for any $f$ which is a polynomial of degree $2n-1$ or less. Such choices then also approximate well the integrals of functions which are not polynomials of degree $2n-1$, provided $f$ can be well approximated by a polynomial over $[-1,1]$. (Which is the case for the "nice" functions we encounter.) Some examples are given in the questions.
 
