--- a/quarto/integrals/center_of_mass.qmd
+++ b/quarto/integrals/center_of_mass.qmd
@@ -32,8 +32,17 @@ m_2$. This means if the two children weigh the same the balance will
 tip in favor of the child farther away, and if both are the same
 distance, the balance will tip in favor of the heavier.
 """
-ImageFile(:integrals, imgfile, caption)
+# ImageFile(:integrals, imgfile, caption)
+nothing
 ```
+
+![A silhouette of two children on a seesaw. The seesaw can be balanced
+only if the distance from the central point for each child reflects
+their relative weights, or masses, through the formula $d_1m_1 = d_2
+m_2$. This means if the two children weigh the same the balance will
+tip in favor of the child farther away, and if both are the same
+distance, the balance will tip in favor of the heavier.
+](./figures/seesaw.png)
 
 The game of seesaw is one where children earn an early appreciation for the effects of distance and relative weight. For children with equal weights, the seesaw will balance if they sit an equal distance from the center (on opposite sides, of course). However, with unequal weights that isn't the case. If one child weighs twice as much, the other must sit twice as far.
 
@@ -148,13 +157,13 @@ The figure shows the approximating rectangles and circles representing their mas
 Generalizing from this figure shows the center of mass for such an approximation will be:
 
 
-$$
+
 \begin{align*}
 &\frac{\rho f(c_1) (x_1 - x_0) \cdot x_1 + \rho f(c_2) (x_2 - x_1) \cdot x_1 + \cdots + \rho f(c_n) (x_n- x_{n-1}) \cdot x_{n-1}}{\rho f(c_1) (x_1 - x_0)  + \rho f(c_2) (x_2 - x_1)  + \cdots + \rho f(c_n) (x_n- x_{n-1})} \\
 &=\\
 &\quad\frac{f(c_1) (x_1 - x_0) \cdot x_1 + f(c_2) (x_2 - x_1) \cdot x_1 + \cdots + f(c_n) (x_n- x_{n-1}) \cdot x_{n-1}}{f(c_1) (x_1 - x_0)  + f(c_2) (x_2 - x_1)  + \cdots + f(c_n) (x_n- x_{n-1})}.
 \end{align*}
-$$
+
 
 But the top part is an approximation to the integral $\int_a^b x f(x) dx$ and the bottom part the integral $\int_a^b f(x) dx$. The ratio of these defines the center of mass.
 
