--- a/quarto/integrals/ftc.qmd
+++ b/quarto/integrals/ftc.qmd
@@ -99,7 +99,7 @@ where we define $g(i) = f(a + ih)h$. In the above, $n$ relates to $b$, but we co
 Again, we fix a large $n$ and let $h=(b-a)/n$. And suppose $x = a + Mh$ for some $M$. Then writing out the approximations to both the definite integral and the derivative we have
 
 
-$$
+
 \begin{align*}
 F'(x) = & \frac{d}{dx} \int_a^x f(u) du \\
 & \approx \frac{F(x) - F(x-h)}{h} \\
@@ -112,18 +112,18 @@ F'(x) = & \frac{d}{dx} \int_a^x f(u) du \\
 \left(f(a + 1h) + f(a + 2h) + \cdots + f(a + (M-1)h) \right) \\
 &= f(a + Mh).
 \end{align*}
-$$
+
 
 If $g(i) = f(a + ih)$, then the above becomes
 
 
-$$
+
 \begin{align*}
 F'(x) & \approx D(S(g))(M) \\
 &= f(a + Mh)\\
 &= f(x).
 \end{align*}
-$$
+
 
 That is $F'(x) \approx f(x)$.
 
@@ -365,26 +365,26 @@ This statement is nothing more than the derivative formula $[cf(x) + dg(x)]' = c
   * The antiderivative of the polynomial $p(x) = a_n x^n + \cdots a_1 x + a_0$ follows from the linearity of the integral and the general power rule:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \int (a_n x^n + \cdots a_1 x + a_0) dx
 &= \int a_nx^n dx + \cdots \int a_1 x dx + \int a_0 dx                   \\
 &= a_n \int x^n dx + \cdots +  a_1 \int x dx + a_0 \int dx                   \\
 &= a_n\frac{x^{n+1}}{n+1} + \cdots +  a_1 \frac{x^2}{2} +  a_0 \frac{x}{1}.
-\end{align}
-$$
+\end{align*}
+
 
   * More generally, a [Laurent](https://en.wikipedia.org/wiki/Laurent_polynomial) polynomial allows for terms with negative powers. These too can be handled by the above. For example
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \int (\frac{2}{x} + 2 + 2x) dx
 &= \int \frac{2}{x} dx + \int 2 dx + \int 2x dx \\
 &= 2\int \frac{1}{x} dx + 2 \int dx + 2 \int xdx\\
 &= 2\log(x) + 2x + 2\frac{x^2}{2}.
-\end{align}
-$$
+\end{align*}
+
 
   * Consider this integral:
 
@@ -433,7 +433,6 @@ The value of $a$ does not matter, as long as the integral is defined.
 ```{julia}
 #| hold: true
 #| echo: false
-#| cache: true
 ##{{{ftc_graph}}}
 
 function make_ftc_graph(n)
@@ -645,14 +644,14 @@ Under assumptions that the $X$ are identical and independent, the largest value,
 This problem is constructed to take advantage of the FTC, and we have:
 
 
-$$
+
 \begin{align*}
 \left[P(M \leq a)\right]'
 &= \left[F(a)^n\right]'\\
 &= n \cdot F(a)^{n-1} \left[F(a)\right]'\\
 &= n F(a)^{n-1}f(a)
 \end{align*}
-$$
+
 
 ##### Example
 
