--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -20,8 +20,12 @@ The following image is the calculator that Google presents upon searching for "c
 #
 imgfile = "figures/calculator.png"
 caption = "Screenshot of a calculator provided by the Google search engine."
-ImageFile(:precalc, imgfile, caption)
+# ImageFile(:precalc, imgfile, caption)
+nothing
 ```
+
+![Screenshot of a calculator provided by the Google search engine.](./figures/calculator.png)
+
 
 This calculator should have a familiar appearance with a keypad of numbers, a set of buttons for arithmetic operations, a set of buttons for some common mathematical functions, a degree/radian switch, and buttons for interacting with the calculator: `Ans`, `AC` (also `CE`), and `=`.
 
@@ -43,7 +47,7 @@ txt = """
 </iframe>
 </center>
 """
-HTMLoutput(txt)
+a = HTMLoutput(txt)
 ```
 
 ## Operations
@@ -203,6 +207,16 @@ Below we use the underscore as a separator, which is parsed as commas are to sep
 ```
 
 Or not quite a million per pound.
+
+Using a pound is $2.2$ killograms or $2,200$ grams, we can this many ants per gram:
+
+
+```{julia}
+20_000_000_000_000_000 / (1_000_000 * 12 * 2000) / 2200
+```
+
+Such combinations will be easier to check for correctness when variable names are assigned the respective values.
+
 
 
 ## Order of operations
@@ -816,7 +830,7 @@ radioq(choices, answ)
 ###### Question
 
 
-In the U.S. version of the Office, the opening credits include a calculator calculation. The key sequence shown is `9653 +` which produces `11532`.  What value was added to?
+In the U.S. version of the Office, the opening credits include a calculator calculation. The key sequence shown is `9653 +` which produces `11532`.  What value was added to `9653`?
 
 
 ```{julia}
@@ -1040,7 +1054,7 @@ radioq(choices, answ)
 A twitter post from popular mechanics generated some attention.
 
 
-![](https://raw.githubusercontent.com/jverzani/CalculusWithJuliaNotes.jl/master/CwJ/precalc/figures/order_operations_pop_mech.png)
+![Order of operations](./figures/order_operations_pop_mech.png)
 
 
 What is the answer?
