--- a/quarto/precalc/inversefunctions.qmd
+++ b/quarto/precalc/inversefunctions.qmd
@@ -69,13 +69,13 @@ However, typically we have a rule describing our function. What is the process t
 When we solve algebraically for $x$ in $y=9/5 \cdot x + 32$ we do the same thing as we do verbally: we subtract $32$ from each side, and then divide by $9/5$ to isolate $x$:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 y &= 9/5 \cdot x + 32\\
 y - 32 &= 9/5 \cdot x\\
 (y-32) / (9/5) &= x.
-\end{align}
-$$
+\end{align*}
+
 
 From this, we have the function $g(y) = (y-32) / (9/5)$ is the inverse function of $f(x) =  9/5\cdot x + 32$.
 
@@ -101,7 +101,7 @@ Suppose a transformation of $x$ is given by $y = f(x) = (ax + b)/(cx+d)$. This f
 From the expression $y=f(x)$ we *algebraically* solve for $x$:
 
 
-$$
+
 \begin{align*}
 y &= \frac{ax +b}{cx+d}\\
 y \cdot (cx + d) &= ax + b\\
@@ -109,7 +109,7 @@ ycx - ax &= b - yd\\
 (cy-a) \cdot x &= b - dy\\
 x &= -\frac{dy - b}{cy-a}.
 \end{align*}
-$$
+
 
 We see that to solve for $x$ we need to divide by $cy-a$, so this expression can not be zero. So, using $x$ as the dummy variable, we have
 
@@ -127,14 +127,14 @@ The function $f(x) = (x-1)^5 + 2$ is strictly increasing and so will have an inv
 Again, we solve algebraically starting with $y=(x-1)^5 + 2$ and solving for $x$:
 
 
-$$
+
 \begin{align*}
 y &= (x-1)^5 + 2\\
 y - 2 &= (x-1)^5\\
 (y-2)^{1/5} &= x - 1\\
 (y-2)^{1/5} + 1 &= x.
 \end{align*}
-$$
+
 
 We see that $f^{-1}(x) = 1 + (x - 2)^{1/5}$. The fact that the power $5$ is an odd power is important, as this ensures a unique (real) solution to the fifth root of a value, in the above $y-2$.
 
@@ -170,14 +170,14 @@ The [inverse function theorem](https://en.wikipedia.org/wiki/Inverse_function_th
 Consider the function $f(x) = (1+x^2)^{-1}$. This bell-shaped function is even (symmetric about $0$), so can not possibly be one-to-one. However, if the domain is restricted to $[0,\infty)$ it is. The restricted function is strictly decreasing and its inverse is found, as follows:
 
 
-$$
+
 \begin{align*}
 y &= \frac{1}{1 + x^2}\\
 1+x^2 &= \frac{1}{y}\\
 x^2 &= \frac{1}{y} - 1\\
 x &= \sqrt{(1-y)/y}, \quad 0 \leq y \leq 1.
 \end{align*}
-$$
+
 
 Then $f^{-1}(x) = \sqrt{(1-x)/x}$ where $0 < x \leq 1$. The somewhat complicated restriction for the the domain coincides with the range of $f(x)$. We shall see next that this is no coincidence.
 
