--- a/quarto/precalc/variables.qmd
+++ b/quarto/precalc/variables.qmd
@@ -18,8 +18,12 @@ nothing
 #| echo: false
 imgfile = "figures/calculator.png"
 caption = "Screenshot of a calculator provided by the Google search engine."
-ImageFile(:precalc, imgfile, caption)
+# ImageFile(:precalc, imgfile, caption)
+nothing
 ```
+
+![Screenshot of a calculator provided by the Google search engine.](figures/calculator.png)
+
 
 The Google calculator has a button `Ans` to refer to the answer to the previous evaluation. This is a form of memory. The last answer is stored in a specific place in memory for retrieval when `Ans` is used. In some calculators, more advanced memory features are possible. For some, it is possible to push values onto a stack of values for them to be referred to at a later time. This proves useful for complicated expressions, say, as the expression can be broken into smaller intermediate steps to be computed. These values can then be appropriately combined. This strategy is a good one, though the memory buttons can make its implementation a bit cumbersome.
 
