--- a/quarto/precalc/vectors.qmd
+++ b/quarto/precalc/vectors.qmd
@@ -83,13 +83,14 @@ For the motion in the above figure, the object's $x$ and $y$ values change accor
 It is common to work with *both* formulas at once. Mathematically, when graphing, we naturally pair off two values using Cartesian coordinates (e.g., $(x,y)$). Another means of combining related values is to use a *vector*. The notation for a vector varies, but to distinguish them from a point we will use $\langle x,~ y\rangle$. With this notation, we can use it to represent the position, the velocity, and the acceleration at time $t$ through:
 
 
-$$
-\begin{align}
+
+\begin{align*}
 \vec{x} &= \langle x_0 + v_{0x}t,~ -(1/2) g t^2 + v_{0y}t  + y_0 \rangle,\\
 \vec{v} &= \langle v_{0x},~ -gt + v_{0y} \rangle, \text{ and }\\
 \vec{a} &= \langle 0,~ -g \rangle.
-\end{align}
-$$
+\end{align*}
+
+
 
 Don't spend time thinking about the formulas if they are unfamiliar. The point emphasized here is that we have used the notation $\langle x,~ y \rangle$ to collect the two values into a single object, which we indicate through a label on the variable name. These are vectors, and we shall see they find use far beyond this application.
 
